--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ja.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ja.resx
@@ -6906,5 +6906,323 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC" xml:space="preserve">
     <value>ランダムにスクリーンセーバーを選択します</value>
   </data>
+  <data name="NKS_KERNEL_SHELLTIP" xml:space="preserve">
+    <value>開始するには、「help」と入力して Enter キーを押します。</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME" xml:space="preserve">
+    <value>読者向けオーディオキュー音量</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC" xml:space="preserve">
+    <value>リーダーの音声キューの音量を指定します</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME" xml:space="preserve">
+    <value>パスワードマスク文字（リーダー）</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC" xml:space="preserve">
+    <value>入力したパスワードを隠す文字です。セキュリティを強化するには空白のままにしてください。</value>
+  </data>
+  <data name="NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3" xml:space="preserve">
+    <value>シェルに移動するには、ホームページからSキーを押してください。その後、「help」と入力してEnterキーを押すと起動できます。</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_EXCEPTION_DUPLICATESETTINGSKEYS" xml:space="preserve">
+    <value>設定インスタンスに重複したキーがあります。変数が複数回存在していないか、再度ご確認ください。</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_MODERNLOGON_CLOSE" xml:space="preserve">
+    <value>近い</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN" xml:space="preserve">
+    <value>シャットダウン</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE" xml:space="preserve">
+    <value>ファイルマネージャー（単一ペイン）</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC" xml:space="preserve">
+    <value>ファイルマネージャを単一のペインで開きます</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC" xml:space="preserve">
+    <value>日付のみ表示</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC" xml:space="preserve">
+    <value>時間だけ表示</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC" xml:space="preserve">
+    <value>ローカルタイムゾーンの代わりに UTC タイムゾーンを使用します</value>
+  </data>
+  <data name="NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING" xml:space="preserve">
+    <value>カーネルアドオンの初期化</value>
+  </data>
+  <data name="NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING_UNKNOWN" xml:space="preserve">
+    <value>それは知られていない</value>
+  </data>
+  <data name="NKS_KERNEL_EXTENSIONS_ADDONS_CHECKING" xml:space="preserve">
+    <value>カーネルアドオンの確認</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME" xml:space="preserve">
+    <value>周囲のスクリーンセーバーの音響効果の強さ</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC" xml:space="preserve">
+    <value>スクリーンセーバーの周囲のサウンド効果の強さを選択するレベルを指定します</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_DEBUG_COMMAND_SENDNOTIFICATION_DESC" xml:space="preserve">
+    <value>テスト通知を送信します</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTCOMPLETE" xml:space="preserve">
+    <value>ユーザーの登録が完了しました。このセットアップキーを追加してください</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTCOMPLETE_QR" xml:space="preserve">
+    <value>または、以下のQRコードをスキャンすることもできます。</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTCOMPLETE_REMINDER" xml:space="preserve">
+    <value>コンソールに不完全なQRコードが表示された場合は、このセットアップキーを使用してください。</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTSTATUS" xml:space="preserve">
+    <value>登録状況</value>
+  </data>
+  <data name="NKS_USERS_USERNOTPROVIDED" xml:space="preserve">
+    <value>ユーザー名が指定されていません。</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_DESC" xml:space="preserve">
+    <value>ユーザー向け二要素認証管理</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_ADD_DESC" xml:space="preserve">
+    <value>ユーザーに要件を追加する</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_USERNAME_DESC" xml:space="preserve">
+    <value>2FA操作を処理するユーザー名</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_DELETE_DESC" xml:space="preserve">
+    <value>ユーザーの要件を削除します</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_CHECK_DESC" xml:space="preserve">
+    <value>ユーザー登録の確認</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_PROVIDECODE" xml:space="preserve">
+    <value>このユーザーの確認コードを入力してください。通常、このコードはGoogle Authenticatorなどの認証アプリからアクセスできます。コードを入力しない場合は、サインインページに戻ります。</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_CODEINVALID" xml:space="preserve">
+    <value>入力したコードは無効です。</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_VERIFYFAILED" xml:space="preserve">
+    <value>アカウントの認証に失敗しました。入力したコードが無効か期限切れである可能性があります。システム時刻をご確認ください。</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERALREADYENROLLED" xml:space="preserve">
+    <value>ユーザーは既に 2FA 認証に登録されています。</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_ENROLL" xml:space="preserve">
+    <value>ユーザーには 2FA 認証に登録するためのパスワードがありません。</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERNOTENROLLED" xml:space="preserve">
+    <value>ユーザーは 2FA 認証に登録されていません。</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_UNENROLL" xml:space="preserve">
+    <value>ユーザーには、2FA 認証への登録を解除するためのパスワードがありません。</value>
+  </data>
+  <data name="NKS_USERS_2FA_SETUPKEY" xml:space="preserve">
+    <value>セットアップキー</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPKEY_DESC" xml:space="preserve">
+    <value>セットアップ キーを返します (何らかの理由で紛失した場合)</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPQR_DESC" xml:space="preserve">
+    <value>携帯電話でスキャンできるセットアップキーのQRコードを返します</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_ISMODE_NOTSPECIFIED" xml:space="preserve">
+    <value>モードが指定されていません。</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_DESC" xml:space="preserve">
+    <value>カーネルモードに応じてtrueまたはfalseを返します</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_ARGUMENT_VERBOSE_DESC" xml:space="preserve">
+    <value>結果をコンソールに出力します</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYMULTIVARPROCESSING" xml:space="preserve">
+    <value>レガシーマルチバー処理</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_MISC" xml:space="preserve">
+    <value>ユーザーには 2FA 認証操作を実行するためのパスワードがありません。</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTFACADES_WIDGETCANVASRENDERTEST_DESC" xml:space="preserve">
+    <value>ウィジェットのキャンバスレンダラーをテストします</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_WIDGETS_CANVAS_EXCEPTION_DESERIALIZE" xml:space="preserve">
+    <value>ウィジェットのキャンバス情報の逆シリアル化に失敗しました</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_KEYBINDING_NEXTPAGE" xml:space="preserve">
+    <value>次のページ</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_KEYBINDING_PREVPAGE" xml:space="preserve">
+    <value>前のページ</value>
+  </data>
+  <data name="NKS_SETTINGS_SCREENSAVER_CURTAIN_DESC" xml:space="preserve">
+    <value>ログイン画面を表示します</value>
+  </data>
+  <data name="NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_NAME" xml:space="preserve">
+    <value>ログインページ番号</value>
+  </data>
+  <data name="NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_DESC" xml:space="preserve">
+    <value>表示するログイン画面のページ番号</value>
+  </data>
+  <data name="NKS_MISC_SPLASHES_WELCOME_INITING" xml:space="preserve">
+    <value>初期化中</value>
+  </data>
+  <data name="NKS_MISC_SPLASHES_WELCOME_SHUTTINGDOWN" xml:space="preserve">
+    <value>シャットダウン</value>
+  </data>
+  <data name="NKS_MISC_SPLASHES_WELCOME_RESTARTING" xml:space="preserve">
+    <value>再起動</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_COMMON_HELP_MOREINFO" xml:space="preserve">
+    <value>このインタラクティブTUIの詳細については、</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_TITLE" xml:space="preserve">
+    <value>スクリーンセーバーのプレビュー</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_DESC" xml:space="preserve">
+    <value>スクリーンセーバーTUIを使用してスクリーンセーバーをプレビューする</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_BODY" xml:space="preserve">
+    <value>このインタラクティブなTUIでは、スクリーンセーバーをプレビューし、画面を保存することができます。スクリーンセーバーは、内蔵スクリーンセーバーまたはカスタムスクリーンセーバーから選択できます。リストからスクリーンセーバーを選択してEnterキーを押すだけで、このTUIから直接プレビューするスクリーンセーバーを簡単に選択できます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TZTUI_HELP01_TITLE" xml:space="preserve">
+    <value>ライブタイムゾーン</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TZTUI_HELP01_DESC" xml:space="preserve">
+    <value>世界時計にタイムゾーンTUIを使用する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TZTUI_HELP01_BODY" xml:space="preserve">
+    <value>このインタラクティブなTUIは、タイムゾーンのリストと、毎秒更新される現地時間を表示します。これにより、すべてのタイムゾーンの時刻を確認できる世界時計アプリケーションとして使用できます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_TITLE" xml:space="preserve">
+    <value>タスクの管理</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_DESC" xml:space="preserve">
+    <value>タスクマネージャーTUIを使用してスレッドを管理する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_BODY" xml:space="preserve">
+    <value>タスクマネージャーのTUIを使用すると、Nitrocidとそのスレッドマネージャーによって管理されるNitrocidカーネルスレッドと、オペレーティングシステムによって管理されるオペレーティングシステムスレッドの両方を管理できます。すべてのスレッドを一覧表示し、タスクの終了を含む管理を行うことができます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_TITLE" xml:space="preserve">
+    <value>オペレーティング システム スレッドの表示</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_DESC" xml:space="preserve">
+    <value>タスク マネージャー TUI を使用してオペレーティング システムのスレッドを表示する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_BODY" xml:space="preserve">
+    <value>タスクマネージャーのTUIには、管理対象スレッド（つまり、Nitrocidとそのスレッドマネージャーによって管理されているスレッド）ごとに、関連するすべてのオペレーティングシステムスレッドが表示されます。管理対象スレッドには複数のオペレーティングシステムスレッドが含まれる場合があるため、これらのスレッドは必ずしも1対1の関係にあるとは限りません。管理対象スレッドとは異なり、これらのスレッドは終了できません。</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>カーネル設定の管理</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_DESC" xml:space="preserve">
+    <value>設定アプリTUIを使用してカーネル設定を管理する</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_BODY" xml:space="preserve">
+    <value>カーネル設定はNitrocidの重要な部分であり、ネットワークスタックやシェルスタックなど、カーネルとそのコンポーネントの一部を設定できます。このTUIを使用すると、カーネルの各部分を簡単に設定でき、直感的なデザインにより、設定ファイルを手動で編集するよりも便利です。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_TITLE" xml:space="preserve">
+    <value>通知の管理</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_DESC" xml:space="preserve">
+    <value>通知TUIを使用して通知を管理する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_BODY" xml:space="preserve">
+    <value>このTUIを使えば、まだ読んでいない通知をすべて管理できます。通知を受信すると、今後の参照のために履歴に追加されます。履歴はカーネルセッション全体、またはユーザーが通知を閉じるまで保持されます。このTUIを使えば、コマンドラインユーティリティを使うよりも簡単に通知を閉じたり管理したりできます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_TITLE" xml:space="preserve">
+    <value>フォルダの選択</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_DESC" xml:space="preserve">
+    <value>フォルダグループセレクターTUIを使用してフォルダを選択する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_BODY" xml:space="preserve">
+    <value>ファイル管理用のTUIのサブセットが提供されており、管理が容易になります。これは、コマンドラインユーティリティを使用して同じ操作を実行するよりも、より迅速かつ便利です。提供されているTUIの1つに、フォルダーグループ選択TUIがあります。これを使用すると、複数のフォルダーを目的の操作の対象として選択できます。このTUIが表示された場合は、操作を完了するためにアプリケーションがフォルダーのグループを選択するように要求しています。スペースキーを使用してフォルダーをリストに追加し、ESCキーを押して選択を確定できます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_TITLE" xml:space="preserve">
+    <value>フォルダの選択</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_DESC" xml:space="preserve">
+    <value>フォルダセレクターTUIを使用してフォルダを選択する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_BODY" xml:space="preserve">
+    <value>ファイル管理用のTUIのサブセットが提供されており、管理が容易になります。これは、コマンドラインユーティリティを使用して同じ操作を実行するよりも、より迅速かつ便利です。提供されるTUIの1つに、フォルダー選択TUIがあります。これを使用すると、目的の操作の対象としてフォルダーを選択できます。このTUIが表示された場合は、操作を完了するためにアプリケーションがフォルダーの選択を要求しています。SPACEキーを使用してフォルダーを選択し、ESCキーを押して選択を確定できます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_TITLE" xml:space="preserve">
+    <value>ファイルの選択</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_DESC" xml:space="preserve">
+    <value>ファイルグループセレクターTUIを使用してファイルを選択する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_BODY" xml:space="preserve">
+    <value>ファイル管理用のTUIのサブセットが提供されており、管理が容易になります。これは、コマンドラインユーティリティを使用して同じ操作を実行するよりも、より迅速かつ便利です。提供されるTUIの1つは、ファイルグループ選択TUIです。これを使用すると、複数のファイルを目的の操作の対象として選択できます。このTUIが表示された場合は、アプリケーションが操作を完了するためにファイルグループの選択を要求しています。スペースキーを使用してファイルをリストに追加し、ESCキーを押して選択を確定できます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_TITLE" xml:space="preserve">
+    <value>ファイルの選択</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_DESC" xml:space="preserve">
+    <value>ファイルセレクタTUIを使用してファイルを選択する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_BODY" xml:space="preserve">
+    <value>ファイル管理用のTUIのサブセットが提供されており、管理が容易になります。これは、コマンドラインユーティリティを使用して同じ操作を実行するよりも、より迅速かつ便利です。提供されるTUIの1つはファイル選択TUIで、これを使用すると、目的の操作の対象としてファイルを選択できます。このTUIが表示された場合は、操作を完了するためにアプリケーションがファイルの選択を要求しています。スペースキーを使用してファイルを選択し、ESCキーを押して選択を確定できます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_TITLE" xml:space="preserve">
+    <value>シングルペインファイルマネージャー</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_DESC" xml:space="preserve">
+    <value>ファイルセレクタTUIを使用してプレビューでファイルを管理する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_BODY" xml:space="preserve">
+    <value>ファイル管理用のTUIのサブセットが提供されており、管理が容易になります。これは、コマンドラインユーティリティを使用して同じ操作を実行するよりも、より迅速かつ便利です。提供されるTUIの1つは、シングルペインのファイル管理TUIです。これにより、右ペインにファイルのプレビューを表示しながらファイルを管理できます。これは、ファイルやフォルダを選択する際に、一目で内容がわかるプレビューペインが必要な場合に便利です。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_TITLE" xml:space="preserve">
+    <value>ダブルペインファイルマネージャー</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_DESC" xml:space="preserve">
+    <value>ファイルセレクタTUIを使用して2つのペインでファイルを管理する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_BODY" xml:space="preserve">
+    <value>ファイル管理用のTUIのサブセットが提供されており、管理が容易になります。これは、コマンドラインユーティリティを使用して同じ操作を実行するよりも、より迅速かつ便利です。提供されるTUIの1つは、Total Commanderと同様のファイル管理を可能にする、ダブルペインのファイル管理TUIです。これにより、手動でパスを指定することなく、どちらのペインに対してもファイル操作を迅速に実行できます。</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_TITLE" xml:space="preserve">
+    <value>アラームの管理</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_DESC" xml:space="preserve">
+    <value>アラームマネージャTUIを使用してアラームを管理する</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY" xml:space="preserve">
+    <value>このインタラクティブなTUIを使えば、アラームの管理が簡単になります。このユーザーインターフェースでは、アラームの追加と解除が可能です。アラームはタイムアウト時間に達すると起動し、通知が表示されます。</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC" xml:space="preserve">
+    <value>検証コード</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE" xml:space="preserve">
+    <value>インタラクティブテスト</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC" xml:space="preserve">
+    <value>カーネルコンポーネントを対話的にテストする方法</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY" xml:space="preserve">
+    <value>左ペインでテストセクションを選択し、右ペインでテストフィクスチャを選択することで、ここでテスト可能なすべてのカーネルコンポーネントをインタラクティブにテストできます。テストの合格または不合格を示すレポートが表示されます。</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR" xml:space="preserve">
+    <value>テストフィクスチャ実行中に不明なエラーが発生しました</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_RUNTEST" xml:space="preserve">
+    <value>テストを実行する</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED" xml:space="preserve">
+    <value>このテストは成功しました!</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED_MATCH" xml:space="preserve">
+    <value>期待値は実際の値と一致します。</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED" xml:space="preserve">
+    <value>このテストは失敗しました。</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MESSAGE" xml:space="preserve">
+    <value>メッセージ</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MATCH" xml:space="preserve">
+    <value>予想値が実際の値と一致しません。</value>
+  </data>
 
 </root>
