--- a/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ko.resx
+++ b/public/Nitrocid.Base/Resources/Languages/Output/Localizations.ko.resx
@@ -6906,5 +6906,323 @@
   <data name="NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC" xml:space="preserve">
     <value>무작위 스크린세이버를 선택합니다</value>
   </data>
+  <data name="NKS_KERNEL_SHELLTIP" xml:space="preserve">
+    <value>시작하려면 &apos;help&apos;를 입력하고 Enter 키를 누르세요.</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME" xml:space="preserve">
+    <value>독자를 위한 오디오 신호 볼륨</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC" xml:space="preserve">
+    <value>낭독 음성 안내의 음량을 어느 정도로 설정할지 지정해 주세요.</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME" xml:space="preserve">
+    <value>비밀번호 마스크 문자(리더)</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC" xml:space="preserve">
+    <value>입력된 비밀번호를 가리는 문자입니다. 보안 강화를 위해 비워 두십시오.</value>
+  </data>
+  <data name="NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3" xml:space="preserve">
+    <value>홈페이지에 있을 때 셸로 이동하려면 S 키를 누르세요. 그런 다음 &apos;help&apos;를 입력하고 Enter 키를 눌러 시작할 수 있습니다!</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_EXCEPTION_DUPLICATESETTINGSKEYS" xml:space="preserve">
+    <value>설정 인스턴스에 중복된 키가 있습니다. 변수가 중복 존재하지 않는지 다시 한번 확인해 주세요.</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_MODERNLOGON_CLOSE" xml:space="preserve">
+    <value>닫다</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN" xml:space="preserve">
+    <value>종료하다</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE" xml:space="preserve">
+    <value>파일 관리자(단일 창)</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC" xml:space="preserve">
+    <value>파일 관리자를 단일 창으로 엽니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC" xml:space="preserve">
+    <value>날짜만 표시합니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC" xml:space="preserve">
+    <value>딱 그 시간을 보여줍니다</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC" xml:space="preserve">
+    <value>현지 시간대 대신 UTC 시간대를 사용합니다.</value>
+  </data>
+  <data name="NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING" xml:space="preserve">
+    <value>커널 애드온 초기화 중</value>
+  </data>
+  <data name="NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING_UNKNOWN" xml:space="preserve">
+    <value>알려지지 않은 것</value>
+  </data>
+  <data name="NKS_KERNEL_EXTENSIONS_ADDONS_CHECKING" xml:space="preserve">
+    <value>커널 애드온 확인 중</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME" xml:space="preserve">
+    <value>화면 보호기 주변음 효과음 강도</value>
+  </data>
+  <data name="NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC" xml:space="preserve">
+    <value>화면 보호기 주변음 효과의 강도를 조절하는 레벨을 지정하세요.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_DEBUG_COMMAND_SENDNOTIFICATION_DESC" xml:space="preserve">
+    <value>테스트 알림을 보냅니다.</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTCOMPLETE" xml:space="preserve">
+    <value>사용자 등록이 완료되었습니다. 이 설정 키를 추가하세요.</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTCOMPLETE_QR" xml:space="preserve">
+    <value>또는 아래 QR 코드를 스캔하셔도 됩니다.</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTCOMPLETE_REMINDER" xml:space="preserve">
+    <value>콘솔에 QR 코드가 불완전하게 표시되는 경우, 이 설정 키를 사용하십시오.</value>
+  </data>
+  <data name="NKS_USERS_2FA_ENROLLMENTSTATUS" xml:space="preserve">
+    <value>등록 상태</value>
+  </data>
+  <data name="NKS_USERS_USERNOTPROVIDED" xml:space="preserve">
+    <value>사용자 이름이 제공되지 않았습니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_DESC" xml:space="preserve">
+    <value>사용자를 위한 2단계 인증 관리</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_ADD_DESC" xml:space="preserve">
+    <value>사용자에게 요구 사항을 추가합니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_USERNAME_DESC" xml:space="preserve">
+    <value>2FA 작업을 처리할 사용자 이름</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_DELETE_DESC" xml:space="preserve">
+    <value>사용자에 대한 요구 사항을 삭제합니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_CHECK_DESC" xml:space="preserve">
+    <value>사용자 등록 확인</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_PROVIDECODE" xml:space="preserve">
+    <value>이 사용자의 인증 코드를 입력하세요. 이 코드는 일반적으로 Google Authenticator와 같은 인증 앱에서 확인할 수 있습니다. 코드를 입력하지 않으면 로그인 페이지로 돌아갑니다.</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_CODEINVALID" xml:space="preserve">
+    <value>입력하신 코드가 유효하지 않습니다.</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_VERIFYFAILED" xml:space="preserve">
+    <value>계정 인증에 실패했습니다. 입력하신 코드가 유효하지 않거나 만료되었을 가능성이 높습니다. 시스템 시간을 확인하세요.</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERALREADYENROLLED" xml:space="preserve">
+    <value>사용자는 이미 2단계 인증에 등록했습니다.</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_ENROLL" xml:space="preserve">
+    <value>사용자가 2단계 인증에 등록할 비밀번호가 없습니다.</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERNOTENROLLED" xml:space="preserve">
+    <value>사용자가 2단계 인증에 등록하지 않았습니다.</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_UNENROLL" xml:space="preserve">
+    <value>사용자가 2단계 인증 해제를 위한 비밀번호를 가지고 있지 않습니다.</value>
+  </data>
+  <data name="NKS_USERS_2FA_SETUPKEY" xml:space="preserve">
+    <value>설정 키</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPKEY_DESC" xml:space="preserve">
+    <value>설정 키를 반환합니다(어떤 이유로든 키를 분실한 경우).</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPQR_DESC" xml:space="preserve">
+    <value>휴대폰으로 스캔할 수 있는 설정 키의 QR 코드를 반환합니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_ISMODE_NOTSPECIFIED" xml:space="preserve">
+    <value>모드가 지정되지 않았습니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_DESC" xml:space="preserve">
+    <value>커널 모드에 따라 true 또는 false를 반환합니다.</value>
+  </data>
+  <data name="NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_ARGUMENT_VERBOSE_DESC" xml:space="preserve">
+    <value>결과를 콘솔에 출력합니다.</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYMULTIVARPROCESSING" xml:space="preserve">
+    <value>기존 다변수 처리</value>
+  </data>
+  <data name="NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_MISC" xml:space="preserve">
+    <value>사용자가 2단계 인증 작업을 수행하기 위한 비밀번호가 없습니다.</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTFACADES_WIDGETCANVASRENDERTEST_DESC" xml:space="preserve">
+    <value>위젯 캔버스 렌더러를 테스트합니다.</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_WIDGETS_CANVAS_EXCEPTION_DESERIALIZE" xml:space="preserve">
+    <value>위젯 캔버스 정보 역직렬화에 실패했습니다.</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_KEYBINDING_NEXTPAGE" xml:space="preserve">
+    <value>다음 페이지</value>
+  </data>
+  <data name="NKS_SHELL_HOMEPAGE_KEYBINDING_PREVPAGE" xml:space="preserve">
+    <value>이전 페이지</value>
+  </data>
+  <data name="NKS_SETTINGS_SCREENSAVER_CURTAIN_DESC" xml:space="preserve">
+    <value>로그인 화면을 보여줍니다</value>
+  </data>
+  <data name="NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_NAME" xml:space="preserve">
+    <value>로그인 페이지 번호</value>
+  </data>
+  <data name="NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_DESC" xml:space="preserve">
+    <value>표시할 로그인 화면의 페이지 번호</value>
+  </data>
+  <data name="NKS_MISC_SPLASHES_WELCOME_INITING" xml:space="preserve">
+    <value>초기화 중</value>
+  </data>
+  <data name="NKS_MISC_SPLASHES_WELCOME_SHUTTINGDOWN" xml:space="preserve">
+    <value>종료 중</value>
+  </data>
+  <data name="NKS_MISC_SPLASHES_WELCOME_RESTARTING" xml:space="preserve">
+    <value>재시작 중</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_COMMON_HELP_MOREINFO" xml:space="preserve">
+    <value>이 대화형 TUI에 대한 자세한 내용은 다음을 참조하십시오.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_TITLE" xml:space="preserve">
+    <value>화면 보호기 미리보기</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_DESC" xml:space="preserve">
+    <value>화면 보호기 TUI를 사용하여 화면 보호기를 미리 보기</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_BODY" xml:space="preserve">
+    <value>이 대화형 TUI를 사용하면 내장 화면 보호기 또는 사용자 지정 화면 보호기를 미리 보고 화면을 저장할 수 있습니다. 목록에서 화면 보호기를 선택하고 Enter 키를 누르면 이 TUI에서 바로 미리 볼 화면 보호기를 쉽게 선택할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TZTUI_HELP01_TITLE" xml:space="preserve">
+    <value>실시간 시간대</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TZTUI_HELP01_DESC" xml:space="preserve">
+    <value>세계 시계에 TUI 시간대를 사용합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TZTUI_HELP01_BODY" xml:space="preserve">
+    <value>이 대화형 기술 사용자 인터페이스(TUI)는 시간대 목록과 해당 시간대의 현지 시간을 매초마다 업데이트하여 보여줍니다. 따라서 이 앱을 세계 시계처럼 사용하여 모든 시간대의 시간을 확인할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_TITLE" xml:space="preserve">
+    <value>작업 관리</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_DESC" xml:space="preserve">
+    <value>작업 관리자 TUI를 사용하여 스레드 관리</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_BODY" xml:space="preserve">
+    <value>작업 관리자 TUI를 사용하면 Nitrocid 및 해당 스레드 관리자가 관리하는 Nitrocid 커널 스레드와 운영 체제가 관리하는 운영 체제 스레드를 모두 관리할 수 있습니다. 모든 스레드를 나열하고 관리할 수 있으며, 스레드 작업을 종료하는 기능도 제공합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_TITLE" xml:space="preserve">
+    <value>운영 체제 스레드 보기</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_DESC" xml:space="preserve">
+    <value>작업 관리자 TUI를 사용하여 운영 체제 스레드 보기</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_BODY" xml:space="preserve">
+    <value>Nitrocid와 해당 스레드 관리자가 관리하는 각 관리 스레드에 대해 작업 관리자 TUI는 해당 관리 스레드와 관련된 모든 운영 체제 스레드를 표시합니다. 관리 스레드는 하나 이상의 운영 체제 스레드를 포함할 수 있으므로 항상 일대일 관계가 있는 것은 아닙니다. 관리 스레드와 달리 이러한 운영 체제 스레드는 종료할 수 없습니다.</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>커널 설정 관리</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_DESC" xml:space="preserve">
+    <value>TUI 설정 앱을 사용하여 커널 설정을 관리합니다.</value>
+  </data>
+  <data name="NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_BODY" xml:space="preserve">
+    <value>커널 설정은 Nitrocid의 핵심 기능으로, 네트워크 스택과 셸 스택을 포함한 커널 및 그 구성 요소의 일부를 설정할 수 있게 해줍니다. 이 TUI(튜토리얼 사용자 인터페이스)를 통해 커널의 일부를 더욱 쉽게 설정할 수 있으며, 직관적인 디자인 덕분에 설정 파일을 수동으로 편집하는 것보다 훨씬 편리합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_TITLE" xml:space="preserve">
+    <value>알림 관리</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_DESC" xml:space="preserve">
+    <value>알림 TUI를 사용하여 알림을 관리합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_BODY" xml:space="preserve">
+    <value>이 TUI를 사용하면 아직 읽지 않은 모든 알림을 관리할 수 있습니다. 알림이 수신되면 나중에 참조할 수 있도록 기록에 추가되며, 이 기록은 커널 세션이 종료될 때까지 또는 사용자가 직접 해제할 때까지 유지됩니다. 이 TUI를 사용하면 명령줄 유틸리티를 사용하는 것보다 훨씬 쉽게 알림을 해제하고 관리할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_TITLE" xml:space="preserve">
+    <value>폴더 선택</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_DESC" xml:space="preserve">
+    <value>폴더 그룹 선택 도구 TUI를 사용하여 폴더를 선택합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_BODY" xml:space="preserve">
+    <value>파일 관리를 위한 몇 가지 TUI(작업 인터페이스)가 제공되어 명령줄 유틸리티를 사용하는 것보다 빠르고 편리하게 파일을 관리할 수 있습니다. 제공되는 TUI 중 하나는 폴더 그룹 선택 TUI로, 여러 폴더를 선택하여 원하는 작업을 수행할 수 있습니다. 이 화면이 표시된다면, 해당 애플리케이션에서 작업을 완료하기 위해 폴더 그룹을 선택하도록 요청한 것입니다. SPACE 키를 눌러 목록에 폴더를 추가한 다음, ESC 키를 눌러 선택을 확정할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_TITLE" xml:space="preserve">
+    <value>폴더 선택</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_DESC" xml:space="preserve">
+    <value>폴더 선택 도구 TUI를 사용하여 폴더를 선택합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_BODY" xml:space="preserve">
+    <value>파일 관리를 위한 몇 가지 TUI(작업 인터페이스)가 제공되어 명령줄 유틸리티를 사용하는 것보다 빠르고 편리하게 파일을 관리할 수 있습니다. 제공되는 TUI 중 하나는 폴더 선택 TUI로, 원하는 작업을 수행할 대상 폴더를 선택할 수 있습니다. 이 화면이 나타났다면, 해당 애플리케이션에서 작업을 완료하기 위해 폴더 선택을 요청한 것입니다. 스페이스 키를 눌러 폴더를 선택한 다음, Esc 키를 눌러 선택을 확정할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_TITLE" xml:space="preserve">
+    <value>파일 선택</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_DESC" xml:space="preserve">
+    <value>파일 그룹 선택 도구인 TUI를 사용하여 파일을 선택합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_BODY" xml:space="preserve">
+    <value>파일 관리를 위한 몇 가지 TUI(작업 인터페이스)가 제공되어 명령줄 유틸리티를 사용하는 것보다 빠르고 편리하게 파일을 관리할 수 있습니다. 제공되는 TUI 중 하나는 파일 그룹 선택 TUI로, 여러 파일을 선택하여 원하는 작업을 수행할 수 있습니다. 이 화면이 표시된다면, 해당 애플리케이션에서 작업을 완료하기 위해 파일 그룹을 선택하도록 요청한 것입니다. SPACE 키를 눌러 목록에 파일을 추가한 다음, ESC 키를 눌러 선택을 확정할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_TITLE" xml:space="preserve">
+    <value>파일 선택</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_DESC" xml:space="preserve">
+    <value>파일 선택 도구 TUI를 사용하여 파일을 선택합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_BODY" xml:space="preserve">
+    <value>파일 관리를 위한 몇 가지 TUI(작업 인터페이스)가 제공되어 명령줄 유틸리티를 사용하는 것보다 빠르고 편리하게 파일을 관리할 수 있습니다. 제공되는 TUI 중 하나는 파일 선택 TUI로, 원하는 작업을 수행할 대상 파일을 선택할 수 있습니다. 이 화면이 나타났다면, 해당 애플리케이션에서 작업을 완료하기 위해 파일을 선택하도록 요청한 것입니다. SPACE 키를 눌러 파일을 선택한 다음, ESC 키를 눌러 선택을 확정할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_TITLE" xml:space="preserve">
+    <value>단일 창 파일 관리자</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_DESC" xml:space="preserve">
+    <value>파일 선택기 TUI를 사용하여 미리보기 기능을 통해 파일을 관리합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_BODY" xml:space="preserve">
+    <value>파일 관리를 위한 몇 가지 TUI(작업 인터페이스)가 제공되어 명령줄 유틸리티를 사용하는 것보다 빠르고 편리하게 파일을 관리할 수 있습니다. 제공되는 TUI 중 하나인 단일 창 파일 관리 TUI는 오른쪽 창에서 파일 미리보기를 보면서 파일을 관리할 수 있도록 해줍니다. 파일이나 폴더를 선택할 때 미리보기 창을 통해 내용을 한눈에 확인하고 싶을 때 유용합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_TITLE" xml:space="preserve">
+    <value>이중 창 파일 관리자</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_DESC" xml:space="preserve">
+    <value>파일 선택기 TUI를 사용하여 두 개의 창에서 파일을 관리합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_BODY" xml:space="preserve">
+    <value>파일 관리를 위한 몇 가지 TUI(작업 인터페이스)가 제공되어 명령줄 유틸리티를 사용하는 것보다 빠르고 편리하게 파일을 관리할 수 있습니다. 제공되는 TUI 중 하나인 이중 창 파일 관리 TUI는 Total Commander와 유사한 방식으로 파일을 관리할 수 있도록 해줍니다. 이 TUI를 사용하면 경로를 수동으로 지정할 필요 없이 두 창 중 하나에서 파일 작업을 신속하게 수행할 수 있습니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_TITLE" xml:space="preserve">
+    <value>알람 관리</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_DESC" xml:space="preserve">
+    <value>알람 관리자 TUI를 사용하여 알람을 관리합니다.</value>
+  </data>
+  <data name="NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY" xml:space="preserve">
+    <value>이 대화형 TUI를 사용하면 알람 관리가 간편합니다. 이 사용자 인터페이스를 통해 알람을 추가하고 해제할 수 있습니다. 알람은 설정된 시간 초과 기간에 도달하면 작동하며, 알림이 표시됩니다.</value>
+  </data>
+  <data name="NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC" xml:space="preserve">
+    <value>인증 코드</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE" xml:space="preserve">
+    <value>대화형 테스트</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC" xml:space="preserve">
+    <value>커널 구성 요소를 대화형으로 테스트하는 방법</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY" xml:space="preserve">
+    <value>왼쪽 창에서 테스트 섹션을 선택하고 오른쪽 창에서 테스트 픽스처를 선택하여 테스트 가능한 모든 커널 구성 요소를 대화형으로 테스트할 수 있습니다. 테스트 통과 또는 실패 여부를 나타내는 보고서가 제공됩니다.</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR" xml:space="preserve">
+    <value>테스트 픽스처 실행 중 알 수 없는 오류가 발생했습니다.</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_RUNTEST" xml:space="preserve">
+    <value>테스트 실행</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED" xml:space="preserve">
+    <value>이 테스트는 성공했습니다!</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED_MATCH" xml:space="preserve">
+    <value>기대값이 실제값과 일치합니다.</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED" xml:space="preserve">
+    <value>이 테스트는 실패했습니다.</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MESSAGE" xml:space="preserve">
+    <value>메시지</value>
+  </data>
+  <data name="NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MATCH" xml:space="preserve">
+    <value>예상값과 실제값이 일치하지 않습니다.</value>
+  </data>
 
 </root>
