--- a/public/Nitrocid.Base/Resources/Languages/arb-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/arb-T.json
@@ -9083,6 +9083,430 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
       "text": "يختار شاشة توقف عشوائية"
+    },
+    {
+      "loc": "NKS_KERNEL_SHELLTIP",
+      "text": "للبدء، اكتب \"help\" واضغط على مفتاح الإدخال (ENTER)."
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME",
+      "text": "مستوى صوت الإشارة الصوتية للقارئ"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC",
+      "text": "حدد مستوى الصوت الذي تريده للإشارات الصوتية للقارئ"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME",
+      "text": "رمز قناع كلمة المرور (قارئ)"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC",
+      "text": "حرف يُستخدم لإخفاء كلمة المرور المدخلة. اتركه فارغًا لمزيد من الأمان."
+    },
+    {
+      "loc": "NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3",
+      "text": "للدخول إلى سطر الأوامر، اضغط على مفتاح S إذا كنت في الصفحة الرئيسية. بعد ذلك، يمكنك كتابة 'help' والضغط على مفتاح الإدخال (Enter) للبدء!"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_DUPLICATESETTINGSKEYS",
+      "text": "تم العثور على مفاتيح مكررة في إعداداتك. يرجى التحقق من المتغير للتأكد من عدم وجوده أكثر من مرة."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_MODERNLOGON_CLOSE",
+      "text": "يغلق"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN",
+      "text": "اغلق"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE",
+      "text": "مدير الملفات (لوحة واحدة)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC",
+      "text": "يفتح مدير الملفات في نافذة واحدة"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC",
+      "text": "يعرض التاريخ فقط"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC",
+      "text": "يعرض الوقت بالضبط"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC",
+      "text": "يستخدم التوقيت العالمي المنسق (UTC) بدلاً من التوقيت المحلي"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING",
+      "text": "تهيئة ملحق النواة"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING_UNKNOWN",
+      "text": "هذا غير معروف"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_CHECKING",
+      "text": "جارٍ فحص إضافة النواة"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME",
+      "text": "شدة المؤثرات الصوتية المحيطة لشاشة التوقف"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC",
+      "text": "حدد المستوى الذي يحدد مدى شدة المؤثرات الصوتية المحيطة لشاشة التوقف"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_SENDNOTIFICATION_DESC",
+      "text": "يرسل إشعار اختبار"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE",
+      "text": "اكتمل تسجيل المستخدم. أضف مفتاح الإعداد هذا"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_QR",
+      "text": "أو يمكنك مسح رمز الاستجابة السريعة أدناه."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_REMINDER",
+      "text": "في حال عرض جهازك رمز QR غير مكتمل، يرجى استخدام مفتاح الإعداد هذا."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTSTATUS",
+      "text": "حالة التسجيل"
+    },
+    {
+      "loc": "NKS_USERS_USERNOTPROVIDED",
+      "text": "لم يتم تقديم اسم المستخدم."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_DESC",
+      "text": "إدارة المصادقة الثنائية للمستخدمين"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_ADD_DESC",
+      "text": "يضيف متطلبات للمستخدم"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_USERNAME_DESC",
+      "text": "اسم المستخدم المطلوب معالجته لعمليات المصادقة الثنائية"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_DELETE_DESC",
+      "text": "حذف المتطلبات الخاصة بالمستخدم"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_CHECK_DESC",
+      "text": "التحقق من تسجيل المستخدم"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE",
+      "text": "أدخل رمز التحقق لهذا المستخدم. يمكنك عادةً الوصول إلى هذا الرمز من تطبيقات المصادقة، مثل تطبيق Google Authenticator. إذا لم تُدخل رمزًا، فسيتم إعادتك إلى صفحة تسجيل الدخول."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_CODEINVALID",
+      "text": "الرمز الذي أدخلته غير صالح."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_VERIFYFAILED",
+      "text": "فشلت عملية التحقق من الحساب. على الأرجح، الرمز الذي أدخلته غير صالح أو منتهي الصلاحية. تحقق من وقت النظام."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERALREADYENROLLED",
+      "text": "لقد قام المستخدم بالفعل بالتسجيل في المصادقة الثنائية."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_ENROLL",
+      "text": "لا يملك المستخدم كلمة مرور لتسجيلها في المصادقة الثنائية."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERNOTENROLLED",
+      "text": "لم يقم المستخدم بالتسجيل في خدمة المصادقة الثنائية (2FA)."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_UNENROLL",
+      "text": "لا يملك المستخدم كلمة مرور لإلغاء تسجيله في مصادقة 2FA."
+    },
+    {
+      "loc": "NKS_USERS_2FA_SETUPKEY",
+      "text": "مفتاح الإعداد"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPKEY_DESC",
+      "text": "يعيد مفتاح الإعداد (في حال فقدته لسبب ما)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPQR_DESC",
+      "text": "يعرض رمز الاستجابة السريعة (QR) الخاص بمفتاح الإعداد والذي يمكنك مسحه ضوئيًا باستخدام هاتفك."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_ISMODE_NOTSPECIFIED",
+      "text": "لم يتم تحديد الوضع."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_DESC",
+      "text": "تُرجع القيمة true أو false بناءً على وضع النواة"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_ARGUMENT_VERBOSE_DESC",
+      "text": "يطبع النتيجة على وحدة التحكم"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYMULTIVARPROCESSING",
+      "text": "معالجة المتغيرات المتعددة القديمة"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_MISC",
+      "text": "لا يملك المستخدم كلمة مرور لإجراء عمليات المصادقة الثنائية."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_WIDGETCANVASRENDERTEST_DESC",
+      "text": "يختبر مُعرِض لوحة الرسم للويدجت"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_WIDGETS_CANVAS_EXCEPTION_DESERIALIZE",
+      "text": "فشل في فك تسلسل معلومات لوحة الرسم الخاصة بالأداة"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_NEXTPAGE",
+      "text": "الصفحة التالية"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_PREVPAGE",
+      "text": "الصفحة السابقة"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_DESC",
+      "text": "يعرض لك شاشة تسجيل الدخول"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_NAME",
+      "text": "رقم صفحة تسجيل الدخول"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_DESC",
+      "text": "رقم صفحة شاشة تسجيل الدخول المراد عرضها"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_INITING",
+      "text": "تهيئة"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_SHUTTINGDOWN",
+      "text": "إغلاق"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_RESTARTING",
+      "text": "إعادة التشغيل"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_COMMON_HELP_MOREINFO",
+      "text": "للمزيد من المعلومات حول واجهة المستخدم التفاعلية هذه، تفضل بزيارة"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_TITLE",
+      "text": "معاينة شاشة التوقف"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لشاشة التوقف لمعاينة شاشة التوقف"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_BODY",
+      "text": "تتيح لك هذه الواجهة التفاعلية معاينة شاشة التوقف وحفظها، سواءً كانت شاشة توقف مدمجة أو شاشة توقف مخصصة. يمكنك بسهولة اختيار شاشة توقف لمعاينتها مباشرةً من هذه الواجهة عن طريق تحديدها من القائمة والضغط على زر الإدخال (Enter)."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_TITLE",
+      "text": "المناطق الزمنية المباشرة"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_DESC",
+      "text": "استخدام منطقة التوقيت TUI للساعة العالمية"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_BODY",
+      "text": "تعرض لك هذه الواجهة التفاعلية قائمة بالمناطق الزمنية وتوقيتاتها المحلية، ويتم تحديثها كل ثانية. يتيح لك ذلك استخدامها كتطبيق ساعة عالمية للاطلاع على التوقيت في جميع المناطق الزمنية."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_TITLE",
+      "text": "إدارة المهام"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لإدارة المهام لإدارة العمليات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_BODY",
+      "text": "تتيح لك واجهة المستخدم الرسومية لمدير المهام إدارة كلٍ من خيوط نواة Nitrocid، التي يديرها Nitrocid ومدير الخيوط الخاص به، وخيوط نظام التشغيل، التي يديرها نظام التشغيل الخاص بك. يمكنك عرض جميع الخيوط وإدارتها، بما في ذلك إمكانية إنهاء مهامها."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_TITLE",
+      "text": "عرض خيوط نظام التشغيل"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لمدير المهام لعرض سلاسل عمليات نظام التشغيل"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_BODY",
+      "text": "لكل عملية مُدارة (أي مُدارة بواسطة Nitrocid ومدير العمليات الخاص به)، تعرض واجهة المستخدم الرسومية لمدير المهام جميع عمليات نظام التشغيل المرتبطة بتلك العملية، ولا تكون العلاقة بينها دائمًا علاقة واحد لواحد، لأن العملية المُدارة قد تحتوي على أكثر من عملية نظام تشغيل واحدة. وعلى عكس العمليات المُدارة، لا يمكن إنهاء هذه العمليات."
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_TITLE",
+      "text": "إدارة إعدادات النواة"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لتطبيق الإعدادات لإدارة إعدادات النواة"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_BODY",
+      "text": "يُعدّ تكوين النواة جزءًا أساسيًا من Nitrocid، حيث يُتيح لك ضبط أجزاء من النواة ومكوناتها، بما في ذلك حزمة الشبكة وحزمة الأوامر. تُسهّل واجهة المستخدم الرسومية هذه عملية تكوين أجزاء النواة، كما أن تصميمها البديهي يجعلها أكثر ملاءمة من تعديل ملف التكوين يدويًا."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_TITLE",
+      "text": "إدارة الإشعارات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية للإشعارات لإدارة الإشعارات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_BODY",
+      "text": "باستخدام واجهة المستخدم الرسومية هذه، يمكنك إدارة جميع الإشعارات التي لم تقرأها بعد. عند استلام إشعار، يُضاف إلى سجل الإشعارات للرجوع إليه لاحقًا، ويستمر هذا السجل طوال جلسة النظام أو حتى تقوم بإغلاقه. تتيح لك هذه الواجهة إغلاق الإشعارات وإدارتها بسهولة، وهو أسهل من استخدام أداة سطر الأوامر."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_TITLE",
+      "text": "تحديد المجلدات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لاختيار مجموعة المجلدات لتحديد المجلدات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_BODY",
+      "text": "تُوفّر مجموعة فرعية من واجهات المستخدم الرسومية لإدارة الملفات لتسهيل الإدارة، مما يجعلها أسرع وأكثر ملاءمة من استخدام أدوات سطر الأوامر لتنفيذ نفس الإجراء. إحدى هذه الواجهات هي واجهة اختيار مجموعة المجلدات، والتي تتيح لك تحديد عدة مجلدات كأهداف للعملية المطلوبة. عند الوصول إلى هذه النافذة، يكون أحد التطبيقات قد طلب منك تحديد مجموعة من المجلدات لإتمام العملية. يمكنك استخدام مفتاح المسافة لإضافة مجلد إلى القائمة، ثم الضغط على مفتاح الهروب (ESC) لتأكيد اختيارك."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_TITLE",
+      "text": "تحديد المجلدات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لاختيار المجلد لتحديد مجلد"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_BODY",
+      "text": "تُوفّر مجموعة فرعية من واجهات المستخدم الرسومية لإدارة الملفات لتسهيل الإدارة، مما يجعلها أسرع وأكثر ملاءمة من استخدام أدوات سطر الأوامر لتنفيذ نفس الإجراء. إحدى هذه الواجهات هي واجهة اختيار المجلدات، والتي تتيح لك تحديد مجلد كهدف للعملية المطلوبة. عند الوصول إلى هذه النافذة، فهذا يعني أن أحد التطبيقات قد طلب منك تحديد مجلد لإتمام العملية. يمكنك استخدام مفتاح المسافة لتحديد المجلد، ثم الضغط على مفتاح الهروب (ESC) لتأكيد اختيارك."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_TITLE",
+      "text": "تحديد الملفات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لاختيار مجموعة الملفات لتحديد الملفات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_BODY",
+      "text": "تُوفّر مجموعة فرعية من واجهات المستخدم الرسومية لإدارة الملفات لتسهيل الإدارة، مما يجعلها أسرع وأكثر ملاءمة من استخدام أدوات سطر الأوامر لتنفيذ نفس الإجراء. إحدى هذه الواجهات هي واجهة اختيار مجموعة الملفات، والتي تتيح لك تحديد عدة ملفات كأهداف للعملية المطلوبة. عند الوصول إلى هذه النافذة، يكون أحد التطبيقات قد طلب منك تحديد مجموعة من الملفات لإتمام العملية. يمكنك استخدام مفتاح المسافة لإضافة ملف إلى القائمة، ثم الضغط على مفتاح الهروب (ESC) لتأكيد اختيارك."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_TITLE",
+      "text": "تحديد الملفات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لاختيار ملف"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_BODY",
+      "text": "تُوفّر مجموعة فرعية من واجهات المستخدم الرسومية لإدارة الملفات لتسهيل الإدارة، مما يجعلها أسرع وأكثر ملاءمة من استخدام أدوات سطر الأوامر لتنفيذ نفس الإجراء. إحدى هذه الواجهات هي واجهة اختيار الملفات، والتي تتيح لك تحديد ملف كهدف للعملية المطلوبة. عند الوصول إلى هذه النافذة، فهذا يعني أن أحد التطبيقات قد طلب منك تحديد ملف لإتمام العملية. يمكنك استخدام مفتاح المسافة لتحديد الملف، ثم الضغط على مفتاح الهروب (ESC) لتأكيد اختيارك."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_TITLE",
+      "text": "مدير ملفات ذو نافذة واحدة"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لاختيار الملفات لإدارة الملفات مع إمكانية المعاينة"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_BODY",
+      "text": "تُوفّر مجموعة فرعية من واجهات المستخدم الرسومية لإدارة الملفات لتسهيل عملية الإدارة، مما يجعلها أسرع وأكثر ملاءمة من استخدام أدوات سطر الأوامر لتنفيذ نفس الإجراء. إحدى هذه الواجهات هي واجهة إدارة الملفات أحادية اللوحة، والتي تتيح لك إدارة ملفاتك مع معاينة الملف في اللوحة اليمنى. يُعدّ هذا مفيدًا إذا كنت ترغب في معاينة سريعة عند تحديد الملفات أو المجلدات."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_TITLE",
+      "text": "مدير ملفات ذو لوحتين"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لاختيار الملفات لإدارة الملفات في جزأين"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_BODY",
+      "text": "تُوفّر مجموعة فرعية من واجهات المستخدم الرسومية لإدارة الملفات لتسهيل الإدارة، مما يجعلها أسرع وأكثر ملاءمة من استخدام أدوات سطر الأوامر لتنفيذ نفس الإجراء. إحدى هذه الواجهات هي واجهة إدارة الملفات ذات اللوحتين، والتي تتيح لك إدارة ملفاتك بشكل مشابه لبرنامج Total Commander. فهي تُمكّنك من إجراء عمليات الملفات بسرعة في أيٍّ من اللوحتين، دون الحاجة إلى تحديد المسارات يدويًا."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_TITLE",
+      "text": "إدارة الإنذارات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_DESC",
+      "text": "استخدام واجهة المستخدم الرسومية لإدارة الإنذارات"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY",
+      "text": "إدارة التنبيهات سهلة مع واجهة المستخدم التفاعلية هذه. تتيح لك هذه الواجهة إضافة التنبيهات وإلغائها. يتم تفعيل التنبيهات عند انتهاء مدتها، مما يؤدي إلى ظهور إشعار."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC",
+      "text": "رمز التحقق"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE",
+      "text": "الاختبار التفاعلي"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC",
+      "text": "كيفية اختبار مكونات النواة بشكل تفاعلي"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY",
+      "text": "يمكنك اختبار جميع مكونات النواة القابلة للاختبار هنا بشكل تفاعلي عن طريق تحديد قسم الاختبار في اللوحة اليسرى ومجموعة الاختبار في اللوحة اليمنى. ستتلقى تقريرًا يوضح ما إذا كان الاختبار قد نجح أم فشل."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR",
+      "text": "حدث خطأ غير معروف أثناء تشغيل جهاز الاختبار"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_RUNTEST",
+      "text": "تشغيل الاختبار"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED",
+      "text": "لقد نجح هذا الاختبار!"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED_MATCH",
+      "text": "القيمة المتوقعة تطابق القيمة الفعلية."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED",
+      "text": "لقد فشل هذا الاختبار."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MESSAGE",
+      "text": "رسالة"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MATCH",
+      "text": "القيمة المتوقعة لا تتطابق مع القيمة الفعلية."
     }
   ]
 }
