--- a/public/Nitrocid.Base/Resources/Languages/chi-T.json
+++ b/public/Nitrocid.Base/Resources/Languages/chi-T.json
@@ -9065,6 +9065,430 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
       "text": "选择随机屏幕保护程序"
+    },
+    {
+      "loc": "NKS_KERNEL_SHELLTIP",
+      "text": "若要開始使用，請輸入“help”並按下回車鍵。"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME",
+      "text": "朗讀者的音訊提示音量"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC",
+      "text": "請指定朗讀者音訊提示的音量大小。"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME",
+      "text": "密碼掩碼字元（讀取器）"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC",
+      "text": "用於屏蔽輸入密碼的字元。留空以提高安全性。"
+    },
+    {
+      "loc": "NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3",
+      "text": "如果您在首頁，請按 S 鍵進入 shell。之後，您可以輸入“help”並按回車鍵開始使用！"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_DUPLICATESETTINGSKEYS",
+      "text": "您的設定實例中存在重複的鍵。請仔細檢查該變量，確保它只存在一次。"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_MODERNLOGON_CLOSE",
+      "text": "關閉"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN",
+      "text": "關閉"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE",
+      "text": "文件管理器（單窗格）"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC",
+      "text": "在單一窗格中開啟檔案總管"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC",
+      "text": "僅顯示日期"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC",
+      "text": "恰逢其時"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC",
+      "text": "使用 UTC 時區而非本地時區"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING",
+      "text": "初始化內核插件"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING_UNKNOWN",
+      "text": "這一點尚不清楚"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_CHECKING",
+      "text": "檢查核心插件"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME",
+      "text": "環境螢幕保音效強度"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC",
+      "text": "指定螢幕保護程式環境音效的強度等級。"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_SENDNOTIFICATION_DESC",
+      "text": "發送測試通知"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE",
+      "text": "用戶註冊完成。新增此設定密鑰"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_QR",
+      "text": "或者，您可以掃描下面的二維碼。"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_REMINDER",
+      "text": "如果您的主機顯示的二維碼不完整，請使用此設定金鑰"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTSTATUS",
+      "text": "入學狀態"
+    },
+    {
+      "loc": "NKS_USERS_USERNOTPROVIDED",
+      "text": "用戶名尚未提供。"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_DESC",
+      "text": "使用者雙重認證管理"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_ADD_DESC",
+      "text": "增加用戶要求"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_USERNAME_DESC",
+      "text": "用於處理雙重認證操作的使用者名"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_DELETE_DESC",
+      "text": "刪除用戶需求"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_CHECK_DESC",
+      "text": "檢查用戶註冊狀況"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE",
+      "text": "請提供此使用者的驗證碼。您通常可以透過驗證器套用（例如 Google Authenticator）來取得此驗證碼。如果您不輸入驗證碼，系統將返回登入頁面。"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_CODEINVALID",
+      "text": "您輸入的驗證碼無效。"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_VERIFYFAILED",
+      "text": "帳戶驗證失敗。很可能是您輸入的驗證碼無效或已過期。請檢查您的系統時間。"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERALREADYENROLLED",
+      "text": "用戶已註冊雙重認證。"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_ENROLL",
+      "text": "使用者沒有密碼，無法註冊雙重認證。"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERNOTENROLLED",
+      "text": "用戶尚未註冊雙重認證。"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_UNENROLL",
+      "text": "用戶沒有密碼，無法取消註冊雙重認證。"
+    },
+    {
+      "loc": "NKS_USERS_2FA_SETUPKEY",
+      "text": "設定密鑰"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPKEY_DESC",
+      "text": "返回設定密鑰（以防您因某種原因丟失密鑰）"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPQR_DESC",
+      "text": "返回設定密鑰的二維碼，您可以使用手機掃描該二維碼。"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_ISMODE_NOTSPECIFIED",
+      "text": "未指定模式。"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_DESC",
+      "text": "根據內核模式傳回 true 或 false"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_ARGUMENT_VERBOSE_DESC",
+      "text": "將結果列印到控制台。"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYMULTIVARPROCESSING",
+      "text": "傳統多變量處理"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_MISC",
+      "text": "使用者沒有密碼，無法執行雙重認證操作。"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_WIDGETCANVASRENDERTEST_DESC",
+      "text": "測試小部件畫布渲染器"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_WIDGETS_CANVAS_EXCEPTION_DESERIALIZE",
+      "text": "無法反序列化控制項畫布訊息"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_NEXTPAGE",
+      "text": "下一頁"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_PREVPAGE",
+      "text": "上一頁"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_DESC",
+      "text": "顯示登入介面"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_NAME",
+      "text": "登入頁面編號"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_DESC",
+      "text": "要顯示的登入畫面頁碼"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_INITING",
+      "text": "初始化"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_SHUTTINGDOWN",
+      "text": "關閉"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_RESTARTING",
+      "text": "重新啟動"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_COMMON_HELP_MOREINFO",
+      "text": "如需了解更多關於此互動式 TUI 的信息，請訪問"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_TITLE",
+      "text": "預覽螢幕保護程式"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_DESC",
+      "text": "使用螢幕保護程式 TUI 預覽螢幕保護程式"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_BODY",
+      "text": "這個互動式使用者介面 (TUI) 可讓您預覽螢幕保護程式並將其儲存到螢幕，既可以使用內建螢幕保護程序，也可以使用自訂螢幕保護程式。您可以直接從清單中選擇螢幕保護程式並按 Enter 鍵，輕鬆地從該 TUI 中選擇要預覽的螢幕保護程式。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_TITLE",
+      "text": "即時時區"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_DESC",
+      "text": "使用 TUI 時區作為世界時鐘"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_BODY",
+      "text": "這個互動式時間使用者介面會顯示時區列表及其對應的本地時間，並每秒刷新一次。因此，您可以將其用作世界時鐘應用程序，查看所有時區的時間。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_TITLE",
+      "text": "管理任務"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_DESC",
+      "text": "使用工作管理員 TUI 管理線程"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_BODY",
+      "text": "工作管理員 TUI 可讓您管理 Nitrocid 核心執行緒（由 Nitrocid 及其執行緒管理器管理）和作業系統執行緒（由您的作業系統管理）。您可以列出所有執行緒並對其進行管理，包括結束其任務。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_TITLE",
+      "text": "查看作業系統線程"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_DESC",
+      "text": "使用工作管理員 TUI 查看作業系統線程"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_BODY",
+      "text": "對於每個受管線程（即由 Nitrocid 及其線程管理器管理的線程），任務管理器 TUI 會顯示所有與該受管線程相關的作業系統線程，但它們並非總是一一對應，因為一個受管線程可能包含多個作業系統線程。與受管執行緒不同，作業系統執行緒無法被終止。"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_TITLE",
+      "text": "管理內核設定"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_DESC",
+      "text": "使用設定應用程式 TUI 管理內核設定"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_BODY",
+      "text": "核心配置是 Nitrocid 的重要組成部分，它允許您配置核心及其元件的部分內容，包括網路協定堆疊和 shell 協定堆疊。此 TUI 介面讓核心配置更加便捷，其直覺的設計也比手動編輯設定檔更方便。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_TITLE",
+      "text": "管理通知"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_DESC",
+      "text": "使用通知使用者介面 (TUI) 管理通知"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_BODY",
+      "text": "透過此使用者介面 (TUI)，您可以管理所有尚未閱讀的通知。收到通知後，它會被添加到歷史記錄中以供將來參考，歷史記錄會保留到核心會話結束或您將其關閉為止。此 TUI 讓您輕鬆關閉和管理通知，比使用命令列公用程式更方便。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_TITLE",
+      "text": "選擇資料夾"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_DESC",
+      "text": "使用資料夾組選擇器 TUI 選擇資料夾"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_BODY",
+      "text": "為了方便管理，我們提供了一系列文件管理使用者介面 (TUI)，比使用命令列工具執行相同操作更快方便。其中一個 TUI 是資料夾群組選擇 TUI，它允許您選擇多個資料夾作為目標操作。如果您看到此介面，說明某個應用程式要求您選擇一組資料夾才能完成操作。您可以使用空白鍵將資料夾新增至清單中，然後按 Esc 鍵確認選擇。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_TITLE",
+      "text": "選擇資料夾"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_DESC",
+      "text": "使用資料夾選擇器 TUI 選擇一個資料夾"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_BODY",
+      "text": "為了方便管理，我們提供了一系列文件管理使用者介面 (TUI)，這比使用命令列工具執行相同操作更快捷方便。其中一個 TUI 是資料夾選擇 TUI，它允許您選擇一個資料夾作為目標操作。如果您看到此介面，則表示某個應用程式要求您選擇一個資料夾才能完成操作。您可以使用空白鍵選擇資料夾，然後按 Esc 鍵確認選擇。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_TITLE",
+      "text": "選擇文件"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_DESC",
+      "text": "使用文件組選擇器 TUI 選擇文件"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_BODY",
+      "text": "為了方便管理文件，我們提供了一系列文件管理使用者介面 (TUI)，比使用命令列工具執行相同操作更快捷方便。其中一個 TUI 是文件組選擇 TUI，它允許您選擇多個文件作為目標操作。如果您看到此介面，說明某個應用程式要求您選擇一組檔案才能完成操作。您可以使用空白鍵將文件新增至清單中，然後按 Esc 鍵確認選擇。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_TITLE",
+      "text": "選擇文件"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_DESC",
+      "text": "使用檔案選擇器 TUI 選擇文件"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_BODY",
+      "text": "為了方便管理文件，我們提供了一系列文件管理使用者介面 (TUI)，這比使用命令列工具執行相同操作更快捷方便。其中一個 TUI 是檔案選擇 TUI，它允許您選擇一個檔案作為目標操作。如果您看到此介面，則表示某個應用程式要求您選擇一個檔案才能完成操作。您可以使用空白鍵選擇文件，然後按 Esc 鍵確認選擇。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_TITLE",
+      "text": "單窗格檔案總管"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_DESC",
+      "text": "使用文件選擇器 TUI 管理文件並預覽"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_BODY",
+      "text": "為了方便管理文件，我們提供了一系列文件管理使用者介面 (TUI)，比使用命令列工具執行相同操作更快、更方便。其中一個 TUI 是單窗格文件管理 TUI，它允許您在右側窗格中預覽文件，從而輕鬆管理文件。如果您希望在選擇文件或資料夾時快速預覽，這將非常有用。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_TITLE",
+      "text": "雙窗格檔案總管"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_DESC",
+      "text": "使用檔案選擇器 TUI 在兩個窗格中管理文件"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_BODY",
+      "text": "為了方便管理文件，我們提供了一系列文件管理使用者介面 (TUI)，比使用命令列工具執行相同操作更快捷方便。其中一個 TUI 是雙窗格檔案管理 TUI，其檔案管理方式與 Total Commander 類似。您可以快速地在任一窗格中執行檔案操作，而無需手動指定路徑。"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_TITLE",
+      "text": "管理警報"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_DESC",
+      "text": "使用警報管理器 TUI 管理警報"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY",
+      "text": "透過這款互動式使用者介面 (TUI)，管理警報變得輕而易舉。您可以透過此使用者介面新增和關閉警報。警報會在逾時後觸發，並顯示通知。"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC",
+      "text": "驗證碼"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE",
+      "text": "互動式測試"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC",
+      "text": "如何互動式地測試內核組件"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY",
+      "text": "您可以在此處互動式地測試所有可測試的核心元件：在左側窗格中選擇測試段，在右側窗格中選擇測試夾具。系統將產生一份報告，指示測試是否通過。"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR",
+      "text": "運行測試裝置時出現未知錯誤。"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_RUNTEST",
+      "text": "運行測試"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED",
+      "text": "測試成功！"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED_MATCH",
+      "text": "預期值與實際值相符。"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED",
+      "text": "本次測試失敗。"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MESSAGE",
+      "text": "訊息"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MATCH",
+      "text": "預期值與實際值不符。"
     }
   ]
 }
