--- a/public/Nitrocid.Base/Resources/Languages/nor.json
+++ b/public/Nitrocid.Base/Resources/Languages/nor.json
@@ -9061,6 +9061,430 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
       "text": "Velger en tilfeldig skjermsparer"
+    },
+    {
+      "loc": "NKS_KERNEL_SHELLTIP",
+      "text": "For å komme i gang, skriv «hjelp» og trykk ENTER."
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME",
+      "text": "Lydsignalvolum for leseren"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC",
+      "text": "Angi hvor høye du vil at leserens lydsignaler skal være"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME",
+      "text": "Passordmasketegn (leser)"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC",
+      "text": "Et tegn som maskerer inndatapassordet. La stå tomt for økt sikkerhet."
+    },
+    {
+      "loc": "NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3",
+      "text": "For å gå til skallet, trykk på S-tasten hvis du er på hjemmesiden. Etterpå kan du skrive «hjelp» og trykke ENTER for å komme i gang!"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_DUPLICATESETTINGSKEYS",
+      "text": "Det har vært dupliserte nøkler i innstillingsinstansen din. Dobbeltsjekk variabelen for å sikre at den ikke finnes mer enn én gang."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_MODERNLOGON_CLOSE",
+      "text": "Lukke"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN",
+      "text": "Slå av"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE",
+      "text": "Filbehandler (enkelt rute)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC",
+      "text": "Åpner filbehandleren i én rute"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC",
+      "text": "Viser bare datoen"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC",
+      "text": "Viser bare tiden"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC",
+      "text": "Bruker UTC-tidssonen i stedet for den lokale tidssonen"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING",
+      "text": "Initialiserer kjernetillegg"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING_UNKNOWN",
+      "text": "det er ikke kjent"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_CHECKING",
+      "text": "Sjekker kjernetillegg"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME",
+      "text": "Intensitet av lydeffekter for omgivende skjermsparer"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC",
+      "text": "Angi nivået som velger hvor intense lydeffektene for omgivelsesskjermspareren er"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_SENDNOTIFICATION_DESC",
+      "text": "Sender testvarsel"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE",
+      "text": "Registrering fullført for brukeren. Legg til denne konfigurasjonsnøkkelen"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_QR",
+      "text": "Eller du kan skanne QR-koden nedenfor."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_REMINDER",
+      "text": "Hvis konsollen din viser en ufullstendig QR-kode, bruk denne konfigurasjonsnøkkelen"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTSTATUS",
+      "text": "Registreringsstatus"
+    },
+    {
+      "loc": "NKS_USERS_USERNOTPROVIDED",
+      "text": "Brukernavn er ikke oppgitt."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_DESC",
+      "text": "Tofaktorautentiseringsadministrasjon for brukere"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_ADD_DESC",
+      "text": "Legger til krav for brukeren"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_USERNAME_DESC",
+      "text": "Brukernavn som skal behandles for 2FA-operasjoner"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_DELETE_DESC",
+      "text": "Sletter kravet for brukeren"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_CHECK_DESC",
+      "text": "Sjekker for brukerregistrering"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE",
+      "text": "Oppgi bekreftelseskoden for denne brukeren. Du kan vanligvis få tilgang til denne koden fra autentiseringsapper, for eksempel Google Authenticator. Hvis du ikke skriver inn en kode, blir du tatt tilbake til påloggingssiden."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_CODEINVALID",
+      "text": "Koden du skrev inn er ugyldig."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_VERIFYFAILED",
+      "text": "Kontobekreftelsen mislyktes. Sannsynligvis er koden du skrev inn enten ugyldig eller utløpt. Sjekk systemtiden."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERALREADYENROLLED",
+      "text": "Brukeren har allerede registrert seg for 2FA-autentisering."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_ENROLL",
+      "text": "Brukeren har ikke noe passord for å registrere seg for 2FA-autentisering."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERNOTENROLLED",
+      "text": "Brukeren har ikke registrert seg for 2FA-autentisering."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_UNENROLL",
+      "text": "Brukeren har ikke noe passord for å avregistrere seg fra 2FA-autentiseringen."
+    },
+    {
+      "loc": "NKS_USERS_2FA_SETUPKEY",
+      "text": "Oppsettnøkkel"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPKEY_DESC",
+      "text": "Returnerer oppsettnøkkelen (i tilfelle du mistet den av en eller annen grunn)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPQR_DESC",
+      "text": "Returnerer QR-koden til konfigurasjonsnøkkelen som du kan skanne med telefonen din"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_ISMODE_NOTSPECIFIED",
+      "text": "Modus er ikke spesifisert."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_DESC",
+      "text": "Returnerer sann eller usann avhengig av kjernemodus"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_ARGUMENT_VERBOSE_DESC",
+      "text": "Skriver ut resultatet til konsollen"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYMULTIVARPROCESSING",
+      "text": "Eldre multivariatbehandling"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_MISC",
+      "text": "Brukeren har ikke passord for å utføre 2FA-autentiseringsoperasjoner."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_WIDGETCANVASRENDERTEST_DESC",
+      "text": "Tester widget-lerretsgjengivelsen"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_WIDGETS_CANVAS_EXCEPTION_DESERIALIZE",
+      "text": "Kunne ikke avserialisering av widget-lerretsinformasjonen"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_NEXTPAGE",
+      "text": "Neste side"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_PREVPAGE",
+      "text": "Forrige side"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_DESC",
+      "text": "Viser deg en innloggingsskjerm"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_NAME",
+      "text": "Nummer på innloggingssiden"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_DESC",
+      "text": "Sidetall på innloggingsskjermen som skal vises"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_INITING",
+      "text": "Initialiserer"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_SHUTTINGDOWN",
+      "text": "Avslutter"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_RESTARTING",
+      "text": "Starter på nytt"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_COMMON_HELP_MOREINFO",
+      "text": "For mer informasjon om denne interaktive TUI-en, besøk"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_TITLE",
+      "text": "Forhåndsvisning av skjermspareren"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_DESC",
+      "text": "Bruke skjermspareren TUI for å forhåndsvise skjermspareren"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_BODY",
+      "text": "Denne interaktive brukergrensesnittet (TUI) lar deg forhåndsvise en skjermsparer og lagre skjermen din med den, enten med en innebygd skjermsparer eller en tilpasset skjermsparer. Du kan enkelt velge en skjermsparer å forhåndsvise direkte fra denne brukergrensesnittet ved å velge en skjermsparer fra listen og trykke ENTER."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_TITLE",
+      "text": "Live-tidssoner"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_DESC",
+      "text": "Bruk av tidssonen TUI for verdensklokken"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_BODY",
+      "text": "Denne interaktive brukervennlige brukergrensesnittet (TUI) viser deg en liste over tidssoner og deres lokale tidsrepresentasjoner som oppdateres hvert sekund. Dette lar deg bruke den som en verdensklokkeapplikasjon for å se på tiden for alle tidssoner."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_TITLE",
+      "text": "Administrere oppgaver"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_DESC",
+      "text": "Bruke oppgavebehandlingens brukergrensesnitt (TUI) til å administrere tråder"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_BODY",
+      "text": "Oppgavebehandlingens brukergrensesnitt (TUI) lar deg administrere både Nitrocid-kjernetrådene, som administreres av Nitrocid og trådbehandleren, og operativsystemtrådene, som administreres av operativsystemet ditt. Du kan liste opp alle tråder og administrere dem, inkludert muligheten til å avslutte oppgavene deres."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_TITLE",
+      "text": "Viser tråder fra operativsystemet"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_DESC",
+      "text": "Bruke oppgavebehandlingens brukergrensesnitt (TUI) til å vise operativsystemtråder"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_BODY",
+      "text": "For hver administrerte tråd (det vil si administrert av Nitrocid og trådbehandleren), viser oppgavebehandlerens brukergrensesnitt (TUI) alle operativsystemtråder som er relatert til en administrert tråd, og de har ikke alltid et én-til-én-forhold, fordi en administrert tråd kan inneholde mer enn én operativsystemtråd. I motsetning til administrerte tråder kan de ikke avsluttes."
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_TITLE",
+      "text": "Administrere kjerneinnstillinger"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_DESC",
+      "text": "Bruk av innstillingsappens brukergrensesnitt (TUI) til å administrere kjerneinnstillinger"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_BODY",
+      "text": "Kjernekonfigurasjon er en viktig del av Nitrocid som lar deg konfigurere deler av kjernen og dens komponenter, inkludert nettverksstakken og skallstakken. Denne brukergrensesnittet (TUI) gjør det enklere for deg å konfigurere deler av kjernen, og den intuitive designen gjør det mer praktisk enn å redigere konfigurasjonsfilen manuelt."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_TITLE",
+      "text": "Administrere varsler"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_DESC",
+      "text": "Bruke varslings-TUI-en til å administrere varsler"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_BODY",
+      "text": "Med denne brukergrensesnittet (TUI) kan du administrere alle varsler du ikke har lest ennå. Når et varsel mottas, legges det til i historikken for fremtidig referanse, som varer i hele kjerneøkten eller til du lukker det. Denne brukergrensesnittet lar deg enkelt lukke og administrere varsler, noe som er enklere enn å bruke kommandolinjeverktøyet."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_TITLE",
+      "text": "Velge mapper"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_DESC",
+      "text": "Bruke mappegruppevelgerens TUI til å velge mapper"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_BODY",
+      "text": "Et delsett av TUI-er for filbehandling er tilgjengelig for enklere administrasjon, noe som er raskere og mer praktisk enn å bruke kommandolinjeverktøyene til å utføre samme handling. En av TUI-ene som er tilgjengelige er TUI-en for valg av mappegruppe, som lar deg velge flere mapper som mål for den tiltenkte operasjonen. Hvis du kommer hit, har et program bedt deg om å velge en gruppe mapper for at operasjonen skal kunne fullføres. Du kan bruke mellomromstasten for å legge til en mappe i listen, og deretter trykke ESC for å bekrefte valget."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_TITLE",
+      "text": "Velge mapper"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_DESC",
+      "text": "Bruke mappevelgerens TUI til å velge en mappe"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_BODY",
+      "text": "Et delsett av TUI-er for filbehandling er tilgjengelig for enklere administrasjon, noe som er raskere og mer praktisk enn å bruke kommandolinjeverktøyene til å utføre den samme handlingen. En av TUI-ene som er tilgjengelige er TUI-en for mappevalg, som lar deg velge en mappe som mål for den tiltenkte operasjonen. Hvis du kommer hit, har et program bedt deg om å velge en mappe for at operasjonen skal kunne fullføres. Du kan bruke mellomromstasten til å velge en mappe, og deretter trykke ESC for å bekrefte valget."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_TITLE",
+      "text": "Velge filer"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_DESC",
+      "text": "Bruke filgruppevelgeren (TUI) til å velge filer"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_BODY",
+      "text": "Et delsett av TUI-er for filbehandling er tilgjengelig for enklere administrasjon, noe som er raskere og mer praktisk enn å bruke kommandolinjeverktøyene til å utføre samme handling. En av TUI-ene som er tilgjengelige er TUI-en for valg av filgruppe, som lar deg velge flere filer som mål for den tiltenkte operasjonen. Hvis du kommer hit, har et program bedt deg om å velge en gruppe filer for at operasjonen skal kunne fullføres. Du kan bruke mellomromstasten for å legge til en fil i listen, og deretter trykke ESC for å bekrefte valget."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_TITLE",
+      "text": "Velge filer"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_DESC",
+      "text": "Bruke filvelgeren TUI til å velge en fil"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_BODY",
+      "text": "Et delsett av TUI-er for filbehandling er tilgjengelig for enklere administrasjon, noe som er raskere og mer praktisk enn å bruke kommandolinjeverktøyene til å utføre den samme handlingen. En av TUI-ene som er tilgjengelige er TUI-en for filvalg, som lar deg velge en fil som mål for den tiltenkte operasjonen. Hvis du kommer hit, har et program bedt deg om å velge en fil for at operasjonen skal kunne fullføres. Du kan bruke mellomromstasten til å velge en fil, og deretter trykke ESC for å bekrefte valget."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_TITLE",
+      "text": "Filbehandler med én rute"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_DESC",
+      "text": "Bruke filvelgerens TUI til å administrere filer med forhåndsvisning"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_BODY",
+      "text": "Et delsett av TUI-er for filbehandling er tilgjengelig for enklere administrasjon, noe som er raskere og mer praktisk enn å bruke kommandolinjeverktøyene til å utføre den samme handlingen. En av TUI-ene som er tilgjengelige er TUI-en for filbehandling med ett rutenett, som lar deg administrere filene dine med forhåndsvisning av filen i høyre rute. Dette er nyttig hvis du vil ha en rask forhåndsvisningsrute når du velger filer eller mapper."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_TITLE",
+      "text": "Filbehandler med dobbelt rute"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_DESC",
+      "text": "Bruke filvelgerens TUI til å administrere filer i to ruter"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_BODY",
+      "text": "Et delsett av TUI-er for filbehandling er tilgjengelig for enklere administrasjon, noe som er raskere og mer praktisk enn å bruke kommandolinjeverktøyene til å utføre den samme handlingen. En av TUI-ene som er tilgjengelige er TUI-en for filbehandling med to ruter, som lar deg administrere filene dine på samme måte som i Total Commander. Den lar deg raskt utføre filoperasjoner til begge rutene, uten å måtte spesifisere stier manuelt."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_TITLE",
+      "text": "Administrere alarmer"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_DESC",
+      "text": "Bruk av alarmbehandlerens TUI til å administrere alarmer"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY",
+      "text": "Det er enkelt å administrere alarmene dine med dette interaktive brukergrensesnittet. Dette brukergrensesnittet lar deg legge til og avvise alarmer. Alarmene utløses når de når tidsavbruddsperioden, noe som fører til at et varsel vises."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC",
+      "text": "Verifiseringskode"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE",
+      "text": "Interaktiv testing"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC",
+      "text": "Slik tester du kjernekomponenter interaktivt"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY",
+      "text": "Du kan interaktivt teste alle kjernekomponenter som kan testes her ved å velge en testseksjon i venstre rute og en testfixtur i høyre rute. Du vil få en rapport som indikerer om en test har bestått eller mislyktes."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR",
+      "text": "Ukjent feil ved kjøring av en testinnretning"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_RUNTEST",
+      "text": "Kjør testen"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED",
+      "text": "Denne testen har vært vellykket!"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED_MATCH",
+      "text": "Forventet verdi samsvarer med faktisk verdi."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED",
+      "text": "Denne testen har mislyktes."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MESSAGE",
+      "text": "Beskjed"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MATCH",
+      "text": "Forventet verdi samsvarer ikke med faktisk verdi."
     }
   ]
 }
