--- a/public/Nitrocid.Base/Resources/Languages/tky.json
+++ b/public/Nitrocid.Base/Resources/Languages/tky.json
@@ -9058,6 +9058,430 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
       "text": "Rastgele bir ekran koruyucu seçer"
+    },
+    {
+      "loc": "NKS_KERNEL_SHELLTIP",
+      "text": "Başlamak için 'help' yazın ve ENTER tuşuna basın."
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME",
+      "text": "Okuyucu için sesli ipucu ses seviyesi"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC",
+      "text": "Okuyucunun sesli uyarılarının ne kadar yüksek sesle olmasını istediğinizi belirtin."
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME",
+      "text": "Parola maskesi karakteri (okuyucu)"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC",
+      "text": "Girilen şifreyi gizleyen bir karakter. Daha fazla güvenlik için boş bırakın."
+    },
+    {
+      "loc": "NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3",
+      "text": "Komut satırına geçmek için ana sayfadaysanız S tuşuna basın. Ardından 'help' yazıp ENTER tuşuna basarak başlayabilirsiniz!"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_DUPLICATESETTINGSKEYS",
+      "text": "Ayarlar örneğinizde yinelenen anahtarlar bulunmaktadır. Lütfen değişkenin birden fazla kez mevcut olmadığından emin olmak için tekrar kontrol edin."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_MODERNLOGON_CLOSE",
+      "text": "Kapalı"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN",
+      "text": "Kapat"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE",
+      "text": "Dosya Yöneticisi (tek bölmeli)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC",
+      "text": "Dosya yöneticisini tek bir bölmede açar."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC",
+      "text": "Sadece tarihi gösterir."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC",
+      "text": "Sadece zamanı gösteriyor."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC",
+      "text": "Yerel saat dilimi yerine UTC saat dilimini kullanır."
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING",
+      "text": "Çekirdek eklentisi başlatılıyor"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING_UNKNOWN",
+      "text": "Bu bilinmiyor"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_CHECKING",
+      "text": "Çekirdek eklentisini kontrol etme"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME",
+      "text": "Ortam ekran koruyucu ses efektlerinin yoğunluğu"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC",
+      "text": "Ortam ekran koruyucu ses efektlerinin yoğunluğunu belirleyen seviyeyi belirtin."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_SENDNOTIFICATION_DESC",
+      "text": "Test bildirimi gönderir."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE",
+      "text": "Kullanıcı kaydı tamamlandı. Bu kurulum anahtarını ekleyin."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_QR",
+      "text": "Ya da aşağıdaki QR kodunu tarayabilirsiniz."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_REMINDER",
+      "text": "Konsolunuzda eksik bir QR kodu görünüyorsa, lütfen bu kurulum anahtarını kullanın."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTSTATUS",
+      "text": "Kayıt durumu"
+    },
+    {
+      "loc": "NKS_USERS_USERNOTPROVIDED",
+      "text": "Kullanıcı adı belirtilmedi."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_DESC",
+      "text": "Kullanıcılar için iki faktörlü kimlik doğrulama yönetimi"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_ADD_DESC",
+      "text": "Kullanıcı için gereksinim ekler."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_USERNAME_DESC",
+      "text": "İki faktörlü kimlik doğrulama (2FA) işlemleri için işlenecek kullanıcı adı"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_DELETE_DESC",
+      "text": "Kullanıcı için gerekliliği siler."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_CHECK_DESC",
+      "text": "Kullanıcı kaydı kontrolleri"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE",
+      "text": "Bu kullanıcı için doğrulama kodunu girin. Bu koda genellikle Google Authenticator gibi kimlik doğrulama uygulamalarından erişebilirsiniz. Kod girmezseniz, oturum açma sayfasına geri yönlendirileceksiniz."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_CODEINVALID",
+      "text": "Girdiğiniz kod geçersiz."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_VERIFYFAILED",
+      "text": "Hesap doğrulama başarısız oldu. Büyük olasılıkla girdiğiniz kod geçersiz veya süresi dolmuş. Sistem saatinizi kontrol edin."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERALREADYENROLLED",
+      "text": "Kullanıcı, iki faktörlü kimlik doğrulama sistemine zaten kaydolmuş durumda."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_ENROLL",
+      "text": "Kullanıcının 2FA kimlik doğrulamasına kaydolmak için şifresi yok."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERNOTENROLLED",
+      "text": "Kullanıcı iki faktörlü kimlik doğrulama sistemine kaydolmadı."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_UNENROLL",
+      "text": "Kullanıcının 2FA kimlik doğrulamasından kaydını iptal etmek için şifresi yok."
+    },
+    {
+      "loc": "NKS_USERS_2FA_SETUPKEY",
+      "text": "Kurulum anahtarı"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPKEY_DESC",
+      "text": "Kurulum anahtarını geri gönderir (herhangi bir nedenle kaybetmiş olmanız durumunda)."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPQR_DESC",
+      "text": "Telefonunuzla tarayabileceğiniz kurulum anahtarının QR kodunu döndürür."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_ISMODE_NOTSPECIFIED",
+      "text": "Mod belirtilmemiş."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_DESC",
+      "text": "Çekirdek moduna bağlı olarak true veya false döndürür."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_ARGUMENT_VERBOSE_DESC",
+      "text": "Sonucu konsola yazdırır."
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYMULTIVARPROCESSING",
+      "text": "Eski Çok Değişkenli İşleme"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_MISC",
+      "text": "Kullanıcının 2FA kimlik doğrulama işlemlerini gerçekleştirmek için şifresi yok."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_WIDGETCANVASRENDERTEST_DESC",
+      "text": "Widget tuval oluşturucusunu test eder."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_WIDGETS_CANVAS_EXCEPTION_DESERIALIZE",
+      "text": "Widget tuval bilgilerinin seri durumdan çıkarılması başarısız oldu."
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_NEXTPAGE",
+      "text": "Sonraki sayfa"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_PREVPAGE",
+      "text": "Önceki sayfa"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_DESC",
+      "text": "Size bir giriş ekranı gösterir."
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_NAME",
+      "text": "Giriş sayfası numarası"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_DESC",
+      "text": "Gösterilecek giriş ekranının sayfa numarası"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_INITING",
+      "text": "Başlatılıyor"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_SHUTTINGDOWN",
+      "text": "Kapatılıyor"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_RESTARTING",
+      "text": "Yeniden Başlatılıyor"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_COMMON_HELP_MOREINFO",
+      "text": "Bu interaktif TUI hakkında daha fazla bilgi için lütfen ziyaret edin."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_TITLE",
+      "text": "Ekran koruyucunun önizlemesi"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_DESC",
+      "text": "Ekran koruyucu TUI'sini kullanarak ekran koruyucunun önizlemesini yapın."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_BODY",
+      "text": "Bu etkileşimli TUI, yerleşik bir ekran koruyucu veya özel bir ekran koruyucu kullanarak ekran koruyucuyu önizlemenize ve ekranınızı onunla kaydetmenize olanak tanır. Listeden bir ekran koruyucu seçip ENTER tuşuna basarak doğrudan bu TUI üzerinden önizlemek istediğiniz ekran koruyucuyu kolayca seçebilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_TITLE",
+      "text": "Canlı saat dilimleri"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_DESC",
+      "text": "Dünya saati için TUI saat dilimi kullanılıyor."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_BODY",
+      "text": "Bu etkileşimli TUI, her saniye yenilenen saat dilimlerinin ve yerel saat gösterimlerinin bir listesini gösterir. Bu sayede, tüm saat dilimlerinin saatine bakmak için dünya saati uygulaması olarak kullanabilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_TITLE",
+      "text": "Görevleri yönetmek"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_DESC",
+      "text": "Görev yöneticisi TUI'sini kullanarak iş parçacıklarını yönetme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_BODY",
+      "text": "Görev yöneticisi TUI, hem Nitrocid ve iş parçacığı yöneticisi tarafından yönetilen Nitrocid çekirdek iş parçacıklarını hem de işletim sisteminiz tarafından yönetilen işletim sistemi iş parçacıklarını yönetmenizi sağlar. Tüm iş parçacıklarını listeleyebilir ve görevlerini sonlandırma özelliği de dahil olmak üzere yönetebilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_TITLE",
+      "text": "İşletim sistemi iş parçacıklarını görüntüleme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_DESC",
+      "text": "Görev yöneticisi TUI'sini kullanarak işletim sistemi iş parçacıklarını görüntüleme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_BODY",
+      "text": "Nitrocid ve iş parçacığı yöneticisi tarafından yönetilen her bir iş parçacığı için, görev yöneticisi arayüzü (TUI), yönetilen iş parçacığıyla ilişkili tüm işletim sistemi iş parçacıklarını gösterir ve bunlar her zaman bire bir ilişkiye sahip olmayabilir, çünkü yönetilen bir iş parçacığı birden fazla işletim sistemi iş parçacığı içerebilir. Yönetilen iş parçacıklarının aksine, bunlar sonlandırılamaz."
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_TITLE",
+      "text": "Çekirdek ayarlarını yönetme"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_DESC",
+      "text": "TUI adlı ayarlar uygulamasını kullanarak çekirdek ayarlarını yönetme"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_BODY",
+      "text": "Çekirdek yapılandırması, Nitrocid'in çekirdeğin ve bileşenlerinin (ağ yığını ve kabuk yığını dahil) bölümlerini yapılandırmanıza olanak tanıyan önemli bir parçasıdır. Bu TUI, çekirdeğin bölümlerini yapılandırmayı kolaylaştırır ve sezgisel tasarımı, yapılandırma dosyasını manuel olarak düzenlemekten daha kullanışlı hale getirir."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_TITLE",
+      "text": "Bildirimleri yönetme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_DESC",
+      "text": "Bildirimleri yönetmek için bildirimler arayüzünü kullanma"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_BODY",
+      "text": "Bu TUI ile henüz okumadığınız tüm bildirimleri yönetebilirsiniz. Bir bildirim alındığında, ileride başvurmak üzere geçmişe eklenir ve bu geçmiş, tüm çekirdek oturumu boyunca veya siz bildirimi kapatana kadar kalır. Bu TUI, komut satırı yardımcı programını kullanmaktan daha kolay bir şekilde bildirimleri kapatmanıza ve yönetmenize olanak tanır."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_TITLE",
+      "text": "Klasörleri seçme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_DESC",
+      "text": "Klasör grubu seçici TUI'yi kullanarak klasörleri seçme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_BODY",
+      "text": "Dosya yönetimi için sunulan TUI'lerin bir alt kümesi, aynı işlemi komut satırı yardımcı programlarıyla yapmaktan daha hızlı ve daha kullanışlı olan daha kolay bir yönetim sağlar. Sunulan TUI'lerden biri, amaçlanan işlem için hedef olarak birden fazla klasör seçmenize olanak tanıyan klasör grubu seçimi TUI'sidir. Buraya yönlendirildiyseniz, bir uygulama sizden işlemin tamamlanması için bir klasör grubu seçmenizi istemiştir. Listeye bir klasör eklemek için SPACE tuşunu, ardından seçiminizi onaylamak için ESC tuşunu kullanabilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_TITLE",
+      "text": "Klasörleri seçme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_DESC",
+      "text": "TUI klasör seçiciyi kullanarak bir klasör seçin."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_BODY",
+      "text": "Dosya yönetimi için sunulan TUI'lerin bir alt kümesi, aynı işlemi komut satırı yardımcı programlarıyla yapmaktan daha hızlı ve daha kullanışlı olan daha kolay bir yönetim sağlar. Sunulan TUI'lerden biri, amaçlanan işlem için hedef olarak bir klasör seçmenize olanak tanıyan klasör seçimi TUI'sidir. Buraya yönlendirildiyseniz, bir uygulama işlemin tamamlanması için sizden bir klasör seçmenizi istemiştir. Bir klasör seçmek için SPACE tuşunu, ardından seçiminizi onaylamak için ESC tuşunu kullanabilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_TITLE",
+      "text": "Dosyaları seçme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_DESC",
+      "text": "Dosya grubu seçici TUI'yi kullanarak dosyaları seçme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_BODY",
+      "text": "Dosya yönetimi için sunulan TUI'lerin bir alt kümesi, aynı işlemi komut satırı yardımcı programlarını kullanarak gerçekleştirmekten daha hızlı ve daha kullanışlı olan daha kolay bir yönetim sağlar. Sunulan TUI'lerden biri, amaçlanan işlem için hedef olarak birden fazla dosya seçmenize olanak tanıyan dosya grubu seçimi TUI'sidir. Buraya yönlendirildiyseniz, bir uygulama sizden işlemin tamamlanması için bir dosya grubu seçmenizi istemiştir. Listeye dosya eklemek için SPACE tuşunu, ardından seçiminizi onaylamak için ESC tuşunu kullanabilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_TITLE",
+      "text": "Dosyaları seçme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_DESC",
+      "text": "TUI dosya seçiciyi kullanarak dosya seçme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_BODY",
+      "text": "Dosya yönetimi için sunulan TUI'lerin bir alt kümesi, aynı işlemi komut satırı yardımcı programlarıyla yapmaktan daha hızlı ve daha kullanışlı olan daha kolay bir yönetim sağlar. Sunulan TUI'lerden biri, amaçlanan işlem için hedef olarak bir dosya seçmenize olanak tanıyan dosya seçme TUI'sidir. Buraya yönlendirildiyseniz, bir uygulama işlemin tamamlanması için sizden bir dosya seçmenizi istemiştir. Bir dosya seçmek için SPACE tuşunu, ardından seçiminizi onaylamak için ESC tuşunu kullanabilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_TITLE",
+      "text": "Tek bölmeli dosya yöneticisi"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_DESC",
+      "text": "Dosya seçici TUI'sini kullanarak önizleme özelliğiyle dosyaları yönetmek"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_BODY",
+      "text": "Dosya yönetimi için sunulan TUI'lerin bir alt kümesi, aynı işlemi komut satırı yardımcı programlarıyla yapmaktan daha hızlı ve daha kullanışlı olan daha kolay bir yönetim sağlar. Sunulan TUI'lerden biri, dosyalarınızı sağ bölmede dosya önizlemesiyle birlikte yönetmenizi sağlayan tek bölmeli dosya yönetimi TUI'sidir. Bu, dosya veya klasör seçtiğinizde anlık önizleme bölmesine sahip olmak istediğinizde kullanışlıdır."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_TITLE",
+      "text": "Çift bölmeli dosya yöneticisi"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_DESC",
+      "text": "Dosya seçici TUI'sini kullanarak dosyaları iki bölmede yönetme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_BODY",
+      "text": "Dosya yönetimi için sunulan TUI'lerin bir alt kümesi, aynı işlemi komut satırı yardımcı programlarıyla yapmaktan daha hızlı ve daha kullanışlı olan daha kolay bir yönetim sağlar. Sunulan TUI'lerden biri, dosyalarınızı Total Commander'a benzer şekilde yönetmenizi sağlayan çift bölmeli dosya yönetimi TUI'sidir. Bu sayede, yolları manuel olarak belirtmek zorunda kalmadan, her iki bölmede de dosya işlemlerini hızlıca gerçekleştirebilirsiniz."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_TITLE",
+      "text": "Alarmları yönetme"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_DESC",
+      "text": "Alarmları yönetmek için TUI alarm yönetim sistemini kullanma"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY",
+      "text": "Bu etkileşimli TUI ile alarmlarınızı yönetmek çok kolay. Bu kullanıcı arayüzü, alarm eklemenize ve kaldırmanıza olanak tanır. Alarmlar, zaman aşımı süresine ulaştıklarında devreye girer ve bir bildirim görüntülenir."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC",
+      "text": "Doğrulama kodu"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE",
+      "text": "Etkileşimli test"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC",
+      "text": "Çekirdek bileşenlerini etkileşimli olarak nasıl test edebilirsiniz?"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY",
+      "text": "Soldaki bölmeden bir test bölümü ve sağdaki bölmeden bir test düzeneği seçerek, burada test edilebilen tüm çekirdek bileşenlerini etkileşimli olarak test edebilirsiniz. Testin başarılı veya başarısız olduğunu gösteren bir rapor alacaksınız."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR",
+      "text": "Test düzeneği çalıştırılırken bilinmeyen bir hata oluştu."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_RUNTEST",
+      "text": "Testi çalıştır"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED",
+      "text": "Bu test başarılı oldu!"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED_MATCH",
+      "text": "Beklenen değer, gerçekleşen değerle eşleşiyor."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED",
+      "text": "Bu test başarısız oldu."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MESSAGE",
+      "text": "Mesaj"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MATCH",
+      "text": "Beklenen değer, gerçekleşen değerle uyuşmuyor."
     }
   ]
 }
