--- a/public/Nitrocid.Base/Resources/Languages/ukr.json
+++ b/public/Nitrocid.Base/Resources/Languages/ukr.json
@@ -9057,6 +9057,430 @@
     {
       "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_SAVESCREEN_SWITCH_RANDOM_DESC",
       "text": "Вибирає випадкову заставку"
+    },
+    {
+      "loc": "NKS_KERNEL_SHELLTIP",
+      "text": "Щоб розпочати, напишіть «допомога» та натисніть ENTER."
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_NAME",
+      "text": "Гучність аудіопідказки для зчитувача"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_CUEVOLUMEREADER_DESC",
+      "text": "Вкажіть, наскільки гучними мають бути звукові підказки читача"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_NAME",
+      "text": "Символ маски пароля (читач)"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_MISC_AESTHETICS_MASKCHARREADER_DESC",
+      "text": "Символ, який маскує введений пароль. Залиште поле порожнім для кращої безпеки."
+    },
+    {
+      "loc": "NKS_KERNEL_FIRSTRUN_PRESENTATION_PAGE4_TEXT3",
+      "text": "Щоб перейти до оболонки, натисніть клавішу S, якщо ви знаходитесь на головній сторінці. Після цього ви можете написати «довідка» та натиснути ENTER, щоб розпочати!"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_EXCEPTION_DUPLICATESETTINGSKEYS",
+      "text": "У вашому екземплярі налаштувань є дублікати ключів. Будь ласка, перевірте змінну ще раз, щоб переконатися, що вона не існує більше одного разу."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_MODERNLOGON_CLOSE",
+      "text": "Закрити"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_SHUTDOWN",
+      "text": "Вимкнути"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_FILEMANAGERSINGLE",
+      "text": "Файловий менеджер (одна панель)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_IFM_SWITCH_SINGLE_DESC",
+      "text": "Відкриває файловий менеджер в одній панелі"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_DATE_DESC",
+      "text": "Показує лише дату"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_TIME_DESC",
+      "text": "Показує саме час"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_DATE_SWITCH_UTC_DESC",
+      "text": "Використовує часовий пояс UTC замість місцевого часового поясу"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING",
+      "text": "Ініціалізація доповнення ядра"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_INITIALIZING_UNKNOWN",
+      "text": "що невідомо"
+    },
+    {
+      "loc": "NKS_KERNEL_EXTENSIONS_ADDONS_CHECKING",
+      "text": "Перевірка доповнення ядра"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_NAME",
+      "text": "Інтенсивність звукових ефектів навколишньої заставки"
+    },
+    {
+      "loc": "NKS_SETTINGS_KERNEL_AUDIO_AMBIENTSCREENSAVEREFFECTSINTENSITY_DESC",
+      "text": "Вкажіть рівень інтенсивності звукових ефектів навколишнього середовища заставки"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_DEBUG_COMMAND_SENDNOTIFICATION_DESC",
+      "text": "Надсилає тестове сповіщення"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE",
+      "text": "Реєстрацію користувача завершено. Додайте цей ключ налаштування."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_QR",
+      "text": "Або ж ви можете відсканувати QR-код нижче."
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTCOMPLETE_REMINDER",
+      "text": "Якщо ваша консоль відображає неповний QR-код, скористайтеся цим ключем налаштування"
+    },
+    {
+      "loc": "NKS_USERS_2FA_ENROLLMENTSTATUS",
+      "text": "Статус реєстрації"
+    },
+    {
+      "loc": "NKS_USERS_USERNOTPROVIDED",
+      "text": "Ім'я користувача не вказано."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_DESC",
+      "text": "Керування двофакторною автентифікацією для користувачів"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_ADD_DESC",
+      "text": "Додає вимогу для користувача"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_USERNAME_DESC",
+      "text": "Ім'я користувача для обробки операцій 2FA"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_DELETE_DESC",
+      "text": "Видаляє вимогу для користувача"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_CHECK_DESC",
+      "text": "Перевірки реєстрації користувачів"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE",
+      "text": "Надайте код підтвердження для цього користувача. Зазвичай ви можете отримати доступ до цього коду з програм автентифікації, таких як Google Authenticator. Якщо ви не введете код, вас буде перенаправлено назад на сторінку входу."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_CODEINVALID",
+      "text": "Введений вами код недійсний."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_VERIFYFAILED",
+      "text": "Не вдалося перевірити обліковий запис. Найімовірніше, введений вами код недійсний або термін його дії минув. Перевірте системний час."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERALREADYENROLLED",
+      "text": "Користувач вже зареєструвався для автентифікації 2FA."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_ENROLL",
+      "text": "Користувач не має пароля для реєстрації в двофакторній автентифікації."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERNOTENROLLED",
+      "text": "Користувач не зареєструвався для автентифікації 2FA."
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_UNENROLL",
+      "text": "Користувач не має пароля для скасування реєстрації в двофакторній автентифікації."
+    },
+    {
+      "loc": "NKS_USERS_2FA_SETUPKEY",
+      "text": "Ключ налаштування"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPKEY_DESC",
+      "text": "Повертає ключ налаштування (на випадок, якщо ви його з якоїсь причини втратили)"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_2FA_ARGUMENT_SETUPQR_DESC",
+      "text": "Повертає QR-код ключа налаштування, який можна відсканувати телефоном"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_ISMODE_NOTSPECIFIED",
+      "text": "Режим не вказано."
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_DESC",
+      "text": "Повертає значення true або false залежно від режиму ядра"
+    },
+    {
+      "loc": "NKS_SHELL_SHELLS_UESH_COMMAND_ISMODE_ARGUMENT_VERBOSE_DESC",
+      "text": "Виводить результат у консоль"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_LEGACYMULTIVARPROCESSING",
+      "text": "Застаріла багатовимірна обробка"
+    },
+    {
+      "loc": "NKS_USERS_2FA_EXCEPTION_USERHASNOPASSWORD_MISC",
+      "text": "Користувач не має пароля для виконання операцій автентифікації 2FA."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTFACADES_WIDGETCANVASRENDERTEST_DESC",
+      "text": "Тестує рендерер полотна віджета"
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_WIDGETS_CANVAS_EXCEPTION_DESERIALIZE",
+      "text": "Не вдалося десеріалізувати інформацію про полотно віджета"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_NEXTPAGE",
+      "text": "Наступна сторінка"
+    },
+    {
+      "loc": "NKS_SHELL_HOMEPAGE_KEYBINDING_PREVPAGE",
+      "text": "Попередня сторінка"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_DESC",
+      "text": "Показує екран входу"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_NAME",
+      "text": "Номер сторінки входу"
+    },
+    {
+      "loc": "NKS_SETTINGS_SCREENSAVER_CURTAIN_PAGENUM_DESC",
+      "text": "Номер сторінки екрана входу для відображення"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_INITING",
+      "text": "Ініціалізація"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_SHUTTINGDOWN",
+      "text": "Вимкнення"
+    },
+    {
+      "loc": "NKS_MISC_SPLASHES_WELCOME_RESTARTING",
+      "text": "Перезапуск"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_COMMON_HELP_MOREINFO",
+      "text": "Щоб отримати докладнішу інформацію про цей інтерактивний TUI, відвідайте"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_TITLE",
+      "text": "Попередній перегляд заставки"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_DESC",
+      "text": "Використання інтерфейсу користувача заставки для попереднього перегляду заставки"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_SCREENSAVERTUI_HELP01_BODY",
+      "text": "Цей інтерактивний TUI дозволяє переглядати заставку та зберігати зображення з неї, використовуючи вбудовану або власну заставку. Ви можете легко вибрати заставку для попереднього перегляду безпосередньо з цього TUI, вибравши заставку зі списку та натиснувши ENTER."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_TITLE",
+      "text": "Часові пояси в реальному часі"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_DESC",
+      "text": "Використання часового поясу TUI для світового годинника"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TZTUI_HELP01_BODY",
+      "text": "Цей інтерактивний TUI показує вам список часових поясів та їх місцеві часові представлення, які оновлюються щосекунди. Це дозволяє використовувати його як програму світового годинника для перегляду часу для всіх часових поясів."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_TITLE",
+      "text": "Керування завданнями"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_DESC",
+      "text": "Використання TUI диспетчера завдань для керування потоками"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP01_BODY",
+      "text": "Інтерфейс менеджера завдань (TUI) дозволяє керувати як потоками ядра Nitrocid, якими керує Nitrocid та його менеджер потоків, так і потоками операційної системи, якими керує ваша операційна система. Ви можете переглядати всі потоки та керувати ними, включаючи можливість завершувати їхні завдання."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_TITLE",
+      "text": "Перегляд потоків операційної системи"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_DESC",
+      "text": "Використання TUI диспетчера завдань для перегляду потоків операційної системи"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_TASKMANUI_HELP02_BODY",
+      "text": "Для кожного керованого потоку (тобто керованого Nitrocid та його менеджером потоків) TUI менеджера завдань показує всі потоки операційної системи, пов'язані з керованим потоком, і вони не завжди мають зв'язок \"один-до-одного\", оскільки керований потік може містити більше одного потоку операційної системи. На відміну від керованих потоків, їх не можна завершити."
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_TITLE",
+      "text": "Керування налаштуваннями ядра"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_DESC",
+      "text": "Використання TUI програми налаштувань для керування параметрами ядра"
+    },
+    {
+      "loc": "NKS_KERNEL_CONFIGURATION_SETTINGS_APP_TUI_HELP01_BODY",
+      "text": "Конфігурація ядра є важливою частиною Nitrocid, яка дозволяє налаштовувати частини ядра та його компоненти, включаючи мережевий стек та стек оболонки. Цей TUI спрощує налаштування частин ядра, а його інтуїтивно зрозумілий дизайн робить його зручнішим, ніж ручне редагування файлу конфігурації."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_TITLE",
+      "text": "Керування сповіщеннями"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_DESC",
+      "text": "Використання інтерфейсу сповіщень TUI для керування сповіщеннями"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_NOTIFICATIONSCLI_HELP01_BODY",
+      "text": "За допомогою цього TUI ви можете керувати всіма сповіщеннями, які ви ще не прочитали. Коли сповіщення отримано, воно додається до історії для подальшого використання, яка зберігається протягом усього сеансу ядра або доки ви його не закриєте. Цей TUI дозволяє легко закривати та керувати сповіщеннями, що простіше, ніж використовувати утиліту командного рядка."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_TITLE",
+      "text": "Вибір папок"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_DESC",
+      "text": "Використання інтерфейсу вибору групи папок (TUI) для вибору папок"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDERS_HELP01_BODY",
+      "text": "Для спрощення керування файлами передбачено підмножину TUI для керування файлами, що є швидшим та зручнішим, ніж використання утиліт командного рядка для виконання тієї ж дії. Одним із наданих TUI є TUI вибору групи папок, який дозволяє вибрати кілька папок як цілі для запланованої операції. Якщо ви потрапили сюди, це означає, що програма запросила вас вибрати групу папок для завершення операції. Ви можете скористатися клавішею ПРОБІЛ, щоб додати папку до списку, а потім натиснути ESC, щоб підтвердити свій вибір."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_TITLE",
+      "text": "Вибір папок"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_DESC",
+      "text": "Використання інтерфейсу вибору папок (TUI) для вибору папки"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FOLDER_HELP01_BODY",
+      "text": "Для спрощення керування файлами передбачено підмножину TUI для керування файлами, що є швидшим та зручнішим, ніж використання утиліт командного рядка для виконання тієї ж дії. Одним із наданих TUI є TUI вибору папки, який дозволяє вибрати папку як ціль для запланованої операції. Якщо ви потрапили сюди, це означає, що програма запросила вас вибрати папку для завершення операції. Ви можете скористатися клавішею ПРОБІЛ, щоб вибрати папку, а потім натиснути ESC, щоб підтвердити свій вибір."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_TITLE",
+      "text": "Вибір файлів"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_DESC",
+      "text": "Використання інтерфейсу вибору групи файлів (TUI) для вибору файлів"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILES_HELP01_BODY",
+      "text": "Для спрощення керування файлами передбачено підмножину TUI для керування файлами, що є швидшим та зручнішим, ніж використання утиліт командного рядка для виконання тієї ж дії. Одним із наданих TUI є TUI вибору групи файлів, який дозволяє вибрати кілька файлів як цілі для запланованої операції. Якщо ви потрапили сюди, це означає, що програма запросила вас вибрати групу файлів для завершення операції. Ви можете скористатися клавішею ПРОБІЛ, щоб додати файл до списку, а потім натиснути ESC, щоб підтвердити свій вибір."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_TITLE",
+      "text": "Вибір файлів"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_DESC",
+      "text": "Використання інтерфейсу вибору файлів (TUI) для вибору файлу"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_FILE_HELP01_BODY",
+      "text": "Для спрощення керування файлами передбачено підмножину TUI для керування файлами, що є швидшим та зручнішим, ніж використання утиліт командного рядка для виконання тієї ж дії. Одним із наданих TUI є TUI вибору файлу, який дозволяє вибрати файл як ціль для запланованої операції. Якщо ви потрапили сюди, це означає, що програма запросила вас вибрати файл для завершення операції. Ви можете скористатися клавішею ПРОБІЛ, щоб вибрати файл, а потім натиснути ESC, щоб підтвердити свій вибір."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_TITLE",
+      "text": "Однопанельний файловий менеджер"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_DESC",
+      "text": "Використання інтерфейсу вибору файлів (TUI) для керування файлами з попереднім переглядом"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_SINGLEPANE_HELP01_BODY",
+      "text": "Для спрощення керування файлами передбачено підмножину TUI-інтерфейсів, що є швидшим та зручнішим, ніж використання утиліт командного рядка для виконання тієї ж дії. Одним із наданих TUI є TUI-інтерфейс керування файлами з однією панеллю, який дозволяє керувати файлами за допомогою попереднього перегляду файлу в правій панелі. Це корисно, якщо вам потрібна панель попереднього перегляду під час вибору файлів або папок."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_TITLE",
+      "text": "Двопанельний файловий менеджер"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_DESC",
+      "text": "Використання інтерфейсу вибору файлів (TUI) для керування файлами у двох панелях"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_FMTUI_DOUBLEPANE_HELP01_BODY",
+      "text": "Для спрощення керування файлами передбачено підмножину TUI-інтерфейсів, що є швидшим та зручнішим, ніж використання утиліт командного рядка для виконання тієї ж дії. Одним із наданих TUI є двопанельний TUI-інтерфейс керування файлами, який дозволяє керувати файлами подібно до Total Commander. Він дозволяє швидко виконувати операції з файлами в будь-якій з панелей, без необхідності вручну вказувати шляхи."
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_TITLE",
+      "text": "Керування тривогами"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_DESC",
+      "text": "Використання TUI менеджера тривог для керування тривогами"
+    },
+    {
+      "loc": "NKS_MISC_INTERACTIVES_ALARMTUI_HELP01_BODY",
+      "text": "Керувати будильниками легко за допомогою цього інтерактивного інтерфейсу користувача. Цей інтерфейс дозволяє додавати та відхиляти будильники. Будильники спрацьовують, коли виходить за межі часу очікування, що призводить до появи сповіщення."
+    },
+    {
+      "loc": "NKS_USERS_LOGIN_2FA_PROVIDECODE_CLASSIC",
+      "text": "Код підтвердження"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_TITLE",
+      "text": "Інтерактивне тестування"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_DESC",
+      "text": "Як інтерактивно тестувати компоненти ядра"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_HELP01_BODY",
+      "text": "Ви можете інтерактивно протестувати всі компоненти ядра, які можна протестувати тут, вибравши розділ тестування на лівій панелі та тестову програму на правій панелі. Вам буде надано звіт, який вказує, що тест пройшов успішно або не пройшов."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTUNKNOWNERROR",
+      "text": "Невідома помилка під час запуску тестового обладнання"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_RUNTEST",
+      "text": "Виконати тест"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED",
+      "text": "Цей тест успішно пройшов!"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTSUCCEEDED_MATCH",
+      "text": "Очікуване значення відповідає фактичному значенню."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED",
+      "text": "Цей тест провалився."
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MESSAGE",
+      "text": "Повідомлення"
+    },
+    {
+      "loc": "NKS_KERNEL_DEBUGGING_TESTING_TESTFAILED_MATCH",
+      "text": "Очікуване значення не відповідає фактичному значенню."
     }
   ]
 }
